@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1996, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1996, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,42 +24,34 @@
  */
 
 /*
- * =======================================================================
- * (c) Copyright IBM Corp. 2018, 2020 All Rights Reserved
- * =======================================================================
+ * ===========================================================================
+ * (c) Copyright IBM Corp. 2018, 2024 All Rights Reserved
+ * ===========================================================================
  */
 
 package java.io;
 
 import java.io.ObjectInputFilter.Config;
-import java.io.ObjectStreamClass.WeakClassKey;
-import java.io.ObjectStreamClass.RecordSupport;
+import java.io.ObjectStreamClass.ConstructorSupport;
+import java.io.ObjectStreamClass.ClassDataSlot;
 import java.lang.System.Logger;
 import java.lang.invoke.MethodHandle;
-import java.lang.ref.ReferenceQueue;
 import java.lang.reflect.Array;
 import java.lang.reflect.InvocationHandler;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.Proxy;
-import java.security.AccessControlContext;
-import java.security.AccessController;
-import java.security.PrivilegedAction;
-import java.security.PrivilegedActionException;
-import java.security.PrivilegedExceptionAction;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
-import java.util.Map;
+import java.util.List;
+import java.util.Locale;
 import java.util.Objects;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ConcurrentMap;
 
-import static java.io.ObjectStreamClass.processQueue;
-
+import jdk.internal.access.JavaLangAccess;
 import jdk.internal.access.SharedSecrets;
 import jdk.internal.event.DeserializationEvent;
 import jdk.internal.misc.Unsafe;
-import sun.reflect.misc.ReflectUtil;
-import sun.security.action.GetBooleanAction;
-import sun.security.action.GetIntegerAction;
+import jdk.internal.util.ByteArray;
 
 /**
  * An ObjectInputStream deserializes primitive data and objects previously
@@ -128,18 +120,18 @@ import sun.security.action.GetIntegerAction;
  * the object's most specific class.
  *
  * <p>For example to read from a stream as written by the example in
- * ObjectOutputStream:
+ * {@link ObjectOutputStream}:
  * <br>
- * <pre>
- *      FileInputStream fis = new FileInputStream("t.tmp");
- *      ObjectInputStream ois = new ObjectInputStream(fis);
- *
- *      int i = ois.readInt();
- *      String today = (String) ois.readObject();
- *      Date date = (Date) ois.readObject();
- *
- *      ois.close();
- * </pre>
+ * {@snippet lang="java" :
+ *     try (FileInputStream fis = new FileInputStream("t.tmp");
+ *          ObjectInputStream ois = new ObjectInputStream(fis)) {
+ *         String label = (String) ois.readObject();
+ *         LocalDateTime dateTime = (LocalDateTime) ois.readObject();
+ *         // Use label and dateTime
+ *     } catch (Exception ex) {
+ *         // handle exception
+ *     }
+ * }
  *
  * <p>Classes control how they are serialized by implementing either the
  * java.io.Serializable or java.io.Externalizable interfaces.
@@ -151,17 +143,23 @@ import sun.security.action.GetIntegerAction;
  * entire graphs.
  *
  * <p>Serializable classes that require special handling during the
- * serialization and deserialization process should implement the following
- * methods:
+ * serialization and deserialization process should implement methods
+ * with the following signatures:
  *
- * <pre>
- * private void writeObject(java.io.ObjectOutputStream stream)
- *     throws IOException;
- * private void readObject(java.io.ObjectInputStream stream)
- *     throws IOException, ClassNotFoundException;
- * private void readObjectNoData()
- *     throws ObjectStreamException;
- * </pre>
+ * {@snippet lang="java":
+ *     private void writeObject(java.io.ObjectOutputStream stream)
+ *         throws IOException;
+ *     private void readObject(java.io.ObjectInputStream stream)
+ *         throws IOException, ClassNotFoundException;
+ *     private void readObjectNoData()
+ *         throws ObjectStreamException;
+ * }
+ *
+ * <p>The method name, modifiers, return type, and number and type of
+ * parameters must match exactly for the method to be used by
+ * serialization or deserialization. The methods should only be
+ * declared to throw checked exceptions consistent with these
+ * signatures.
  *
  * <p>The readObject method is responsible for reading and restoring the state
  * of the object for its particular class using data written to the stream by
@@ -222,6 +220,8 @@ import sun.security.action.GetIntegerAction;
  * implemented by a class they can write and read their own state using all of
  * the methods of ObjectOutput and ObjectInput.  It is the responsibility of
  * the objects to handle any versioning that occurs.
+ * Value objects cannot be `java.io.Externalizable` because value objects are
+ * immutable and `Externalizable.readExternal` is unable to modify the fields of the value.
  *
  * <p>Enum constants are deserialized differently than ordinary serializable or
  * externalizable objects.  The serialized form of an enum constant consists
@@ -247,6 +247,11 @@ import sun.security.action.GetIntegerAction;
  * <cite>Java Object Serialization Specification,</cite> Section 1.13,
  * "Serialization of Records"</a> for additional information.
  *
+ * <p>Value classes are {@linkplain Serializable} through the use of the serialization proxy pattern.
+ * See {@linkplain ObjectOutputStream##valueclass-serialization value class serialization} for details.
+ * When the proxy is deserialized it re-constructs and returns the value object.
+ *
+ * @spec serialization/index.html Java Object Serialization Specification
  * @author      Mike Warres
  * @author      Roger Riggs
  * @see java.io.DataInput
@@ -259,43 +264,48 @@ import sun.security.action.GetIntegerAction;
 public class ObjectInputStream
     extends InputStream implements ObjectInput, ObjectStreamConstants
 {
+    private static final String TRACE_DEST =
+            System.getProperty("TRACE");
+
+    static void TRACE(String format, Object... args) {
+        if (TRACE_DEST != null) {
+            var ps = "OUT".equals(TRACE_DEST.toUpperCase(Locale.ROOT)) ? System.out : System.err;
+            ps.println(("TRACE " + format).formatted(args));
+        }
+    }
+
     /** handle value representing null */
     private static final int NULL_HANDLE = -1;
 
     /** marker for unshared objects in internal handle table */
     private static final Object unsharedMarker = new Object();
 
-    /**
-     * immutable table mapping primitive type names to corresponding
-     * class objects
-     */
-    private static final Map<String, Class<?>> primClasses =
-        Map.of("boolean", boolean.class,
-               "byte", byte.class,
-               "char", char.class,
-               "short", short.class,
-               "int", int.class,
-               "long", long.class,
-               "float", float.class,
-               "double", double.class,
-               "void", void.class);
-
     private static class Caches {
         /** cache of subclass security audit results */
-        static final ConcurrentMap<WeakClassKey,Boolean> subclassAudits =
-            new ConcurrentHashMap<>();
-
-        /** queue for WeakReferences to audited subclasses */
-        static final ReferenceQueue<Class<?>> subclassAuditsQueue =
-            new ReferenceQueue<>();
+        static final ClassValue<Boolean> subclassAudits =
+            new ClassValue<>() {
+                @Override
+                protected Boolean computeValue(Class<?> type) {
+                    return auditSubclass(type);
+                }
+            };
 
         /**
          * Property to permit setting a filter after objects
          * have been read.
          * See {@link #setObjectInputFilter(ObjectInputFilter)}
          */
-        static final boolean SET_FILTER_AFTER_READ = GetBooleanAction
-                .privilegedGetProperty("jdk.serialSetFilterAfterRead");
+        static final boolean SET_FILTER_AFTER_READ =
+                Boolean.getBoolean("jdk.serialSetFilterAfterRead");
+
+        /**
+         * Property to control {@link GetField#get(String, Object)} conversion of
+         * {@link ClassNotFoundException} to {@code null}. If set to {@code true}
+         * {@link GetField#get(String, Object)} returns null otherwise
+         * throwing {@link ClassNotFoundException}.
+         */
+        private static final boolean GETFIELD_CNFE_RETURNS_NULL =
+                Boolean.getBoolean("jdk.serialGetFieldCnfeReturnsNull");
 
         /**
          * Property to override the implementation limit on the number
@@ -303,8 +313,8 @@ public class ObjectInputStream
          * The maximum number of interfaces allowed for a proxy is limited to 65535 by
          * {@link java.lang.reflect.Proxy#newProxyInstance(ClassLoader, Class[], InvocationHandler)}.
          */
-        static final int PROXY_INTERFACE_LIMIT = Math.max(0, Math.min(65535, GetIntegerAction
-                .privilegedGetProperty("jdk.serialProxyInterfaceLimit", 65535)));
+        static final int PROXY_INTERFACE_LIMIT =
+                Math.clamp(Integer.getInteger("jdk.serialProxyInterfaceLimit", 65535), 0, 65535);
     }
 
     /*
@@ -366,36 +376,21 @@ public class ObjectInputStream
      */
     private boolean streamFilterSet;
 
-    /**
-     * cache LUDCL (Latest User Defined Class Loader) till completion of
-     * read* requests
+    /* Cache LUDCL (Latest User-Defined Class Loader) until completion of read requests.
+     * If true LUDCL/forName results would be cached, true by default starting with Java 8.
      */
+    private static final boolean isClassCachingEnabled =
+            Boolean.parseBoolean(System.getProperty("com.ibm.enableClassCaching", "true"));
+    /* ClassByNameCache Entry for caching class.forName results upon enableClassCaching. */
+    private static final ClassByNameCache classByNameCache =
+            isClassCachingEnabled ? new ClassByNameCache() : null;
 
-    /* ClassCache Entry for caching class.forName results upon enableClassCaching */
-    private static final ClassCache classCache;
-    private static final boolean isClassCachingEnabled;
-    static {
-        isClassCachingEnabled =
-            AccessController.doPrivileged(new GetClassCachingSettingAction());
-        classCache = (isClassCachingEnabled ? new ClassCache() : null);
-    }
-  
-
-    /** if true LUDCL/forName results would be cached, true by default starting Java8 */
-    private static final class GetClassCachingSettingAction
-    implements PrivilegedAction<Boolean> {
-        public Boolean run() {
-            String property =
-                System.getProperty("com.ibm.enableClassCaching", "true");
-            return property.equalsIgnoreCase("true");
-        }
-    }
     private ClassLoader cachedLudcl;
     /* If user code is invoked in the middle of a call to readObject the cachedLudcl
      * must be refreshed as the ludcl could have been changed while in user code.
      */
-    private boolean refreshLudcl = false;
-    private Object startingLudclObject = null;
+    private boolean refreshLudcl;
+    private Object startingLudclObject;
 
     /**
      * Creates an ObjectInputStream that reads from the specified InputStream.
@@ -404,27 +399,26 @@ public class ObjectInputStream
      * has written and flushed the header.
      *
      * <p>The constructor initializes the deserialization filter to the filter returned
-     * by invoking the {@link Config#getSerialFilterFactory()} with {@code null} for the current filter
+     * by invoking the serial filter factory returned from {@link Config#getSerialFilterFactory()}
+     * with {@code null} for the current filter
      * and the {@linkplain Config#getSerialFilter() static JVM-wide filter} for the requested filter.
-     *
-     * <p>If a security manager is installed, this constructor will check for
-     * the "enableSubclassImplementation" SerializablePermission when invoked
-     * directly or indirectly by the constructor of a subclass which overrides
-     * the ObjectInputStream.readFields or ObjectInputStream.readUnshared
-     * methods.
+     * If the serial filter or serial filter factory properties are invalid
+     * an {@link IllegalStateException} is thrown.
+     * When the filter factory {@code apply} method is invoked it may throw a runtime exception
+     * preventing the {@code ObjectInputStream} from being constructed.
      *
      * @param   in input stream to read from
      * @throws  StreamCorruptedException if the stream header is incorrect
      * @throws  IOException if an I/O error occurs while reading stream header
-     * @throws  SecurityException if untrusted subclass illegally overrides
-     *          security-sensitive methods
+     * @throws  IllegalStateException if the initialization of {@link ObjectInputFilter.Config}
+     *          fails due to invalid serial filter or serial filter factory properties.
      * @throws  NullPointerException if {@code in} is {@code null}
      * @see     ObjectInputStream#ObjectInputStream()
      * @see     ObjectInputStream#readFields()
      * @see     ObjectOutputStream#ObjectOutputStream(OutputStream)
      */
+    @SuppressWarnings("this-escape")
     public ObjectInputStream(InputStream in) throws IOException {
-        verifySubclass();
         bin = new BlockDataInputStream(in);
         handles = new HandleTable(10);
         vlist = new ValidationList();
@@ -441,27 +435,19 @@ public class ObjectInputStream
      * implementation of ObjectInputStream.
      *
      * <p>The constructor initializes the deserialization filter to the filter returned
-     * by invoking the {@link Config#getSerialFilterFactory()} with {@code null} for the current filter
+     * by invoking the serial filter factory returned from {@link Config#getSerialFilterFactory()}
+     * with {@code null} for the current filter
      * and the {@linkplain Config#getSerialFilter() static JVM-wide filter} for the requested filter.
+     * If the serial filter or serial filter factory properties are invalid
+     * an {@link IllegalStateException} is thrown.
+     * When the filter factory {@code apply} method is invoked it may throw a runtime exception
+     * preventing the {@code ObjectInputStream} from being constructed.
      *
-     * <p>If there is a security manager installed, this method first calls the
-     * security manager's {@code checkPermission} method with the
-     * {@code SerializablePermission("enableSubclassImplementation")}
-     * permission to ensure it's ok to enable subclassing.
-     *
-     * @throws  SecurityException if a security manager exists and its
-     *          {@code checkPermission} method denies enabling
-     *          subclassing.
      * @throws  IOException if an I/O error occurs while creating this stream
-     * @see SecurityManager#checkPermission
-     * @see java.io.SerializablePermission
+     * @throws  IllegalStateException if the initialization of {@link ObjectInputFilter.Config}
+     *      fails due to invalid serial filter or serial filter factory properties.
      */
-    protected ObjectInputStream() throws IOException, SecurityException {
-        @SuppressWarnings("removal")
-        SecurityManager sm = System.getSecurityManager();
-        if (sm != null) {
-            sm.checkPermission(SUBCLASS_IMPLEMENTATION_PERMISSION);
-        }
+    protected ObjectInputStream() throws IOException {
         bin = null;
         handles = null;
         vlist = null;
@@ -488,6 +474,14 @@ public class ObjectInputStream
      * <p>The deserialization filter, when not {@code null}, is invoked for
      * each object (regular or class) read to reconstruct the root object.
      * See {@link #setObjectInputFilter(ObjectInputFilter) setObjectInputFilter} for details.
+     *
+     * <p>Serialization and deserialization of value classes is described in
+     * {@linkplain ObjectOutputStream##valueclass-serialization value class serialization}.
+     *
+     * @implSpec
+     * When enabled with {@code --enable-preview}, serialization and deserialization of
+     * Core Library value classes migrated from pre-JEP 401 identity classes is
+     * implementation specific.
      *
      * <p>Exceptions are thrown for problems with the InputStream and for
      * classes that should not be deserialized.  All exceptions are fatal to
@@ -518,12 +512,10 @@ public class ObjectInputStream
      * latestUserDefinedLoader().
      *
      * @throws  ClassNotFoundException if the class of a serialized object
-     * 	   could not be found.
+     *     could not be found.
      * @throws  IOException if an I/O error occurs.
-     *
      */
-
-    private static Object redirectedReadObject(ObjectInputStream iStream, Class caller)
+    private static Object redirectedReadObject(ObjectInputStream iStream, Class<?> caller)
             throws ClassNotFoundException, IOException
     {
         return iStream.readObject(Object.class, caller);
@@ -561,7 +553,7 @@ public class ObjectInputStream
      * @throws  ClassNotFoundException Class of a serialized object cannot be
      *          found.
      */
-    private final Object readObject(Class<?> type, Class caller)
+    private final Object readObject(Class<?> type, Class<?> caller)
         throws IOException, ClassNotFoundException
     {
         if (enableOverride) {
@@ -572,22 +564,22 @@ public class ObjectInputStream
             throw new AssertionError("internal error");
 
         ClassLoader oldCachedLudcl = null;
-	    boolean setCached = false;
-	
-	    if (((null == curContext) || refreshLudcl) && (isClassCachingEnabled)) {
+        boolean setCached = false;
+
+        if (((null == curContext) || refreshLudcl) && isClassCachingEnabled) {
             oldCachedLudcl = cachedLudcl;
+            setCached = true;
 
             // If caller is not provided, follow the standard path to get the cachedLudcl.
             // Otherwise use the class loader provided by JIT as the cachedLudcl.
 
             if (caller == null) {
-                 cachedLudcl = latestUserDefinedLoader();
-            }else{
-                 cachedLudcl = caller.getClassLoader();
+                refreshLudcl = true;
+            } else {
+                cachedLudcl = caller.getClassLoader();
+                refreshLudcl = false;
             }
 
-            setCached = true;
-            refreshLudcl = false;
             if (null == startingLudclObject) {
                 startingLudclObject = this;
             }
@@ -678,12 +670,6 @@ public class ObjectInputStream
      * each object (regular or class) read to reconstruct the root object.
      * See {@link #setObjectInputFilter(ObjectInputFilter) setObjectInputFilter} for details.
      *
-     * <p>ObjectInputStream subclasses which override this method can only be
-     * constructed in security contexts possessing the
-     * "enableSubclassImplementation" SerializablePermission; any attempt to
-     * instantiate such a subclass without this permission will cause a
-     * SecurityException to be thrown.
-     *
      * @return  reference to deserialized object
      * @throws  ClassNotFoundException if class of an object to deserialize
      *          cannot be found
@@ -696,15 +682,13 @@ public class ObjectInputStream
      * @since   1.4
      */
     public Object readUnshared() throws IOException, ClassNotFoundException {
-
         ClassLoader oldCachedLudcl = null;
-        boolean setCached = false; 
+        boolean setCached = false;
 
-        if (((null == curContext) || refreshLudcl) && (isClassCachingEnabled)) {
+        if (((null == curContext) || refreshLudcl) && isClassCachingEnabled) {
             oldCachedLudcl = cachedLudcl;
-            cachedLudcl = latestUserDefinedLoader();
             setCached = true;
-            refreshLudcl = false;
+            refreshLudcl = true;
             if (null == startingLudclObject) {
                 startingLudclObject = this;
             }
@@ -829,7 +813,7 @@ public class ObjectInputStream
      * restored a final set of validations can be performed.
      *
      * @param   obj the object to receive the validation callback.
-     * @param   prio controls the order of callbacks;zero is a good default.
+     * @param   prio controls the order of callbacks; zero is a good default.
      *          Use higher numbers to be called back earlier, lower numbers for
      *          later callbacks. Within a priority, callbacks are processed in
      *          no particular order.
@@ -862,9 +846,9 @@ public class ObjectInputStream
      *
      * <p>The default implementation of this method in
      * {@code ObjectInputStream} returns the result of calling
-     * <pre>
+     * {@snippet lang="java":
      *     Class.forName(desc.getName(), false, loader)
-     * </pre>
+     * }
      * where {@code loader} is the first class loader on the current
      * thread's stack (starting from the currently executing method) that is
      * neither the {@linkplain ClassLoader#getPlatformClassLoader() platform
@@ -890,17 +874,17 @@ public class ObjectInputStream
     {
         String name = desc.getName();
         try {
-            if (null == classCache) {
+            if (null == classByNameCache) {
                 return Class.forName(name, false, latestUserDefinedLoader());
             } else {
                 if (refreshLudcl) {
                     cachedLudcl = latestUserDefinedLoader();
                     refreshLudcl = false;
                 }
-                return classCache.get(name, cachedLudcl);
+                return classByNameCache.get(name, cachedLudcl);
             }
         } catch (ClassNotFoundException ex) {
-            Class<?> cl = primClasses.get(name);
+            Class<?> cl = Class.forPrimitiveName(name);
             if (cl != null) {
                 return cl;
             } else {
@@ -932,9 +916,9 @@ public class ObjectInputStream
      * objects for the interfaces that are named in the {@code interfaces}
      * parameter.  The {@code Class} object for each interface name
      * {@code i} is the value returned by calling
-     * <pre>
+     * {@snippet lang="java":
      *     Class.forName(i, false, loader)
-     * </pre>
+     * }
      * where {@code loader} is the first class loader on the current
      * thread's stack (starting from the currently executing method) that is
      * neither the {@linkplain ClassLoader#getPlatformClassLoader() platform
@@ -1032,35 +1016,13 @@ public class ObjectInputStream
      * enabled, the {@link #resolveObject} method is called for every object being
      * deserialized.
      *
-     * <p>If object replacement is currently not enabled, and
-     * {@code enable} is true, and there is a security manager installed,
-     * this method first calls the security manager's
-     * {@code checkPermission} method with the
-     * {@code SerializablePermission("enableSubstitution")} permission to
-     * ensure that the caller is permitted to enable the stream to do replacement
-     * of objects read from the stream.
-     *
      * @param   enable true for enabling use of {@code resolveObject} for
      *          every object being deserialized
      * @return  the previous setting before this method was invoked
-     * @throws  SecurityException if a security manager exists and its
-     *          {@code checkPermission} method denies enabling the stream
-     *          to do replacement of objects read from the stream.
-     * @see SecurityManager#checkPermission
-     * @see java.io.SerializablePermission
      */
-    protected boolean enableResolveObject(boolean enable)
-        throws SecurityException
-    {
+    protected boolean enableResolveObject(boolean enable) {
         if (enable == enableResolve) {
             return enable;
-        }
-        if (enable) {
-            @SuppressWarnings("removal")
-            SecurityManager sm = System.getSecurityManager();
-            if (sm != null) {
-                sm.checkPermission(SUBSTITUTION_PERMISSION);
-            }
         }
         enableResolve = enable;
         return !enableResolve;
@@ -1116,8 +1078,9 @@ public class ObjectInputStream
      * Reads a byte of data. This method will block if no input is available.
      *
      * @return  the byte read, or -1 if the end of the stream is reached.
-     * @throws  IOException If an I/O error has occurred.
+     * @throws  IOException {@inheritDoc}
      */
+    @Override
     public int read() throws IOException {
         return bin.read();
     }
@@ -1130,8 +1093,9 @@ public class ObjectInputStream
      * @param   buf the buffer into which the data is read
      * @param   off the start offset in the destination array {@code buf}
      * @param   len the maximum number of bytes read
-     * @return  the actual number of bytes read, -1 is returned when the end of
-     *          the stream is reached.
+     * @return  the total number of bytes read into the buffer, or
+     *          {@code -1} if there is no more data because the end of
+     *          the stream has been reached.
      * @throws  NullPointerException if {@code buf} is {@code null}.
      * @throws  IndexOutOfBoundsException if {@code off} is negative,
      *          {@code len} is negative, or {@code len} is greater than
@@ -1139,14 +1103,12 @@ public class ObjectInputStream
      * @throws  IOException If an I/O error has occurred.
      * @see java.io.DataInputStream#readFully(byte[],int,int)
      */
+    @Override
     public int read(byte[] buf, int off, int len) throws IOException {
         if (buf == null) {
             throw new NullPointerException();
         }
-        int endoff = off + len;
-        if (off < 0 || len < 0 || endoff > buf.length || endoff < 0) {
-            throw new IndexOutOfBoundsException();
-        }
+        Objects.checkFromIndexSize(off, len, buf.length);
         return bin.read(buf, off, len, false);
     }
 
@@ -1157,16 +1119,17 @@ public class ObjectInputStream
      * @throws  IOException if there are I/O errors while reading from the
      *          underlying {@code InputStream}
      */
+    @Override
     public int available() throws IOException {
         return bin.available();
     }
 
     /**
-     * Closes the input stream. Must be called to release any resources
-     * associated with the stream.
+     * {@inheritDoc}
      *
-     * @throws  IOException If an I/O error has occurred.
+     * @throws  IOException {@inheritDoc}
      */
+    @Override
     public void close() throws IOException {
         /*
          * Even if stream already closed, propagate redundant close to
@@ -1191,9 +1154,9 @@ public class ObjectInputStream
     }
 
     /**
-     * Reads an 8 bit byte.
+     * Reads an 8-bit byte.
      *
-     * @return  the 8 bit byte read.
+     * @return  the 8-bit byte read.
      * @throws  EOFException If end of file is reached.
      * @throws  IOException If other I/O error has occurred.
      */
@@ -1202,9 +1165,9 @@ public class ObjectInputStream
     }
 
     /**
-     * Reads an unsigned 8 bit byte.
+     * Reads an unsigned 8-bit byte.
      *
-     * @return  the 8 bit byte read.
+     * @return  the 8-bit byte read.
      * @throws  EOFException If end of file is reached.
      * @throws  IOException If other I/O error has occurred.
      */
@@ -1213,9 +1176,9 @@ public class ObjectInputStream
     }
 
     /**
-     * Reads a 16 bit char.
+     * Reads a 16-bit char.
      *
-     * @return  the 16 bit char read.
+     * @return  the 16-bit char read.
      * @throws  EOFException If end of file is reached.
      * @throws  IOException If other I/O error has occurred.
      */
@@ -1224,9 +1187,9 @@ public class ObjectInputStream
     }
 
     /**
-     * Reads a 16 bit short.
+     * Reads a 16-bit short.
      *
-     * @return  the 16 bit short read.
+     * @return  the 16-bit short read.
      * @throws  EOFException If end of file is reached.
      * @throws  IOException If other I/O error has occurred.
      */
@@ -1235,9 +1198,9 @@ public class ObjectInputStream
     }
 
     /**
-     * Reads an unsigned 16 bit short.
+     * Reads an unsigned 16-bit short.
      *
-     * @return  the 16 bit short read.
+     * @return  the 16-bit short read.
      * @throws  EOFException If end of file is reached.
      * @throws  IOException If other I/O error has occurred.
      */
@@ -1246,9 +1209,9 @@ public class ObjectInputStream
     }
 
     /**
-     * Reads a 32 bit int.
+     * Reads a 32-bit int.
      *
-     * @return  the 32 bit integer read.
+     * @return  the 32-bit integer read.
      * @throws  EOFException If end of file is reached.
      * @throws  IOException If other I/O error has occurred.
      */
@@ -1257,9 +1220,9 @@ public class ObjectInputStream
     }
 
     /**
-     * Reads a 64 bit long.
+     * Reads a 64-bit long.
      *
-     * @return  the read 64 bit long.
+     * @return  the read 64-bit long.
      * @throws  EOFException If end of file is reached.
      * @throws  IOException If other I/O error has occurred.
      */
@@ -1268,9 +1231,9 @@ public class ObjectInputStream
     }
 
     /**
-     * Reads a 32 bit float.
+     * Reads a 32-bit float.
      *
-     * @return  the 32 bit float read.
+     * @return  the 32-bit float read.
      * @throws  EOFException If end of file is reached.
      * @throws  IOException If other I/O error has occurred.
      */
@@ -1279,9 +1242,9 @@ public class ObjectInputStream
     }
 
     /**
-     * Reads a 64 bit double.
+     * Reads a 64-bit double.
      *
-     * @return  the 64 bit double read.
+     * @return  the 64-bit double read.
      * @throws  EOFException If end of file is reached.
      * @throws  IOException If other I/O error has occurred.
      */
@@ -1315,10 +1278,7 @@ public class ObjectInputStream
      * @throws  IOException If other I/O error has occurred.
      */
     public void readFully(byte[] buf, int off, int len) throws IOException {
-        int endoff = off + len;
-        if (off < 0 || len < 0 || endoff > buf.length || endoff < 0) {
-            throw new IndexOutOfBoundsException();
-        }
+        Objects.checkFromIndexSize(off, len, buf.length);
         bin.readFully(buf, off, len, false);
     }
 
@@ -1329,6 +1289,7 @@ public class ObjectInputStream
      * @return  the actual number of bytes skipped.
      * @throws  IOException If an I/O error has occurred.
      */
+    @Override
     public int skipBytes(int len) throws IOException {
         return bin.skipBytes(len);
     }
@@ -1420,6 +1381,8 @@ public class ObjectInputStream
      *     <li>each object reference previously deserialized from the stream
      *     (class is {@code null}, arrayLength is -1),
      *     <li>each regular class (class is not {@code null}, arrayLength is -1),
+     *     <li>each interface class explicitly referenced in the stream
+     *         (it is not called for interfaces implemented by classes in the stream),
      *     <li>each interface of a dynamic proxy and the dynamic proxy class itself
      *     (class is not {@code null}, arrayLength is -1),
      *     <li>each array is filtered using the array type and length of the array
@@ -1449,8 +1412,6 @@ public class ObjectInputStream
      * is increased before reading an object.
      *
      * @param filter the filter, may be null
-     * @throws SecurityException if there is security manager and the
-     *       {@code SerializablePermission("serialFilter")} is not granted
      * @throws IllegalStateException if an object has been read,
      *       if the filter factory returns {@code null} when the
      *       {@linkplain #getObjectInputFilter() current filter} is non-null, or
@@ -1458,11 +1419,6 @@ public class ObjectInputStream
      * @since 9
      */
     public final void setObjectInputFilter(ObjectInputFilter filter) {
-        @SuppressWarnings("removal")
-        SecurityManager sm = System.getSecurityManager();
-        if (sm != null) {
-            sm.checkPermission(ObjectStreamConstants.SERIAL_FILTER_PERMISSION);
-        }
         if (totalObjectRefs > 0 && !Caches.SET_FILTER_AFTER_READ) {
             throw new IllegalStateException(
                     "filter can not be set after an object has been read");
@@ -1532,9 +1488,7 @@ public class ObjectInputStream
             event.commit();
         }
         if (serialFilter != null && (status == null || status == ObjectInputFilter.Status.REJECTED)) {
-            InvalidClassException ice = new InvalidClassException("filter status: " + status);
-            ice.initCause(ex);
-            throw ice;
+            throw new InvalidClassException("filter status: " + status, ex);
         }
     }
 
@@ -1549,16 +1503,16 @@ public class ObjectInputStream
      * @param arrayLength the array length
      * @throws NullPointerException if arrayType is null
      * @throws IllegalArgumentException if arrayType isn't actually an array type
-     * @throws NegativeArraySizeException if arrayLength is negative
+     * @throws StreamCorruptedException if arrayLength is negative
      * @throws InvalidClassException if the filter rejects creation
      */
-    private void checkArray(Class<?> arrayType, int arrayLength) throws InvalidClassException {
+    private void checkArray(Class<?> arrayType, int arrayLength) throws ObjectStreamException {
         if (! arrayType.isArray()) {
             throw new IllegalArgumentException("not an array type");
         }
 
         if (arrayLength < 0) {
-            throw new NegativeArraySizeException();
+            throw new StreamCorruptedException("Array length is negative");
         }
 
         filterCheck(arrayType, arrayLength);
@@ -1713,40 +1667,13 @@ public class ObjectInputStream
          * @param  val the default value to use if {@code name} does not
          *         have a value
          * @return the value of the named {@code Object} field
+         * @throws ClassNotFoundException Class of a serialized object cannot be found.
          * @throws IOException if there are I/O errors while reading from the
          *         underlying {@code InputStream}
          * @throws IllegalArgumentException if type of {@code name} is
          *         not serializable or if the field type is incorrect
          */
-        public abstract Object get(String name, Object val) throws IOException;
-    }
-
-    /**
-     * Verifies that this (possibly subclass) instance can be constructed
-     * without violating security constraints: the subclass must not override
-     * security-sensitive non-final methods, or else the
-     * "enableSubclassImplementation" SerializablePermission is checked.
-     */
-    private void verifySubclass() {
-        Class<?> cl = getClass();
-        if (cl == ObjectInputStream.class) {
-            return;
-        }
-        @SuppressWarnings("removal")
-        SecurityManager sm = System.getSecurityManager();
-        if (sm == null) {
-            return;
-        }
-        processQueue(Caches.subclassAuditsQueue, Caches.subclassAudits);
-        WeakClassKey key = new WeakClassKey(cl, Caches.subclassAuditsQueue);
-        Boolean result = Caches.subclassAudits.get(key);
-        if (result == null) {
-            result = auditSubclass(cl);
-            Caches.subclassAudits.putIfAbsent(key, result);
-        }
-        if (!result) {
-            sm.checkPermission(SUBCLASS_IMPLEMENTATION_PERMISSION);
-        }
+        public abstract Object get(String name, Object val) throws IOException, ClassNotFoundException;
     }
 
     /**
@@ -1754,31 +1681,24 @@ public class ObjectInputStream
      * override security-sensitive non-final methods.  Returns TRUE if subclass
      * is "safe", FALSE otherwise.
      */
-    @SuppressWarnings("removal")
     private static Boolean auditSubclass(Class<?> subcl) {
-        return AccessController.doPrivileged(
-            new PrivilegedAction<Boolean>() {
-                public Boolean run() {
-                    for (Class<?> cl = subcl;
-                         cl != ObjectInputStream.class;
-                         cl = cl.getSuperclass())
-                    {
-                        try {
-                            cl.getDeclaredMethod(
-                                "readUnshared", (Class[]) null);
-                            return Boolean.FALSE;
-                        } catch (NoSuchMethodException ex) {
-                        }
-                        try {
-                            cl.getDeclaredMethod("readFields", (Class[]) null);
-                            return Boolean.FALSE;
-                        } catch (NoSuchMethodException ex) {
-                        }
-                    }
-                    return Boolean.TRUE;
-                }
+        for (Class<?> cl = subcl;
+             cl != ObjectInputStream.class;
+             cl = cl.getSuperclass())
+        {
+            try {
+                cl.getDeclaredMethod(
+                    "readUnshared", (Class[]) null);
+                return Boolean.FALSE;
+            } catch (NoSuchMethodException ex) {
             }
-        );
+            try {
+                cl.getDeclaredMethod("readFields", (Class[]) null);
+                return Boolean.FALSE;
+            } catch (NoSuchMethodException ex) {
+            }
+        }
+        return Boolean.TRUE;
     }
 
     /**
@@ -2039,12 +1959,6 @@ public class ObjectInputStream
         };
     }
 
-    private boolean isCustomSubclass() {
-        // Return true if this class is a custom subclass of ObjectInputStream
-        return getClass().getClassLoader()
-                    != ObjectInputStream.class.getClassLoader();
-    }
-
     /**
      * Reads in and returns class descriptor for a dynamic proxy class.  Sets
      * passHandle to proxy class descriptor's assigned handle.  If proxy class
@@ -2090,12 +2004,6 @@ public class ObjectInputStream
             } else if (!Proxy.isProxyClass(cl)) {
                 throw new InvalidClassException("Not a proxy");
             } else {
-                // ReflectUtil.checkProxyPackageAccess makes a test
-                // equivalent to isCustomSubclass so there's no need
-                // to condition this call to isCustomSubclass == true here.
-                ReflectUtil.checkProxyPackageAccess(
-                        getClass().getClassLoader(),
-                        cl.getInterfaces());
                 // Filter the interfaces
                 for (Class<?> clazz : cl.getInterfaces()) {
                     filterCheck(clazz, -1);
@@ -2103,11 +2011,10 @@ public class ObjectInputStream
             }
         } catch (ClassNotFoundException ex) {
             resolveEx = ex;
-        } catch (OutOfMemoryError memerr) {
-            IOException ex = new InvalidObjectException("Proxy interface limit exceeded: " +
-                    Arrays.toString(ifaces));
-            ex.initCause(memerr);
-            throw ex;
+        } catch (IllegalAccessError aie) {
+            throw new InvalidClassException(aie.getMessage(), aie);
+        } catch (OutOfMemoryError oome) {
+            throw genInvalidObjectException(oome, ifaces);
         }
 
         // Call filterCheck on the class before reading anything else
@@ -2119,11 +2026,8 @@ public class ObjectInputStream
             totalObjectRefs++;
             depth++;
             desc.initProxy(cl, resolveEx, readClassDesc(false));
-        } catch (OutOfMemoryError memerr) {
-            IOException ex = new InvalidObjectException("Proxy interface limit exceeded: " +
-                    Arrays.toString(ifaces));
-            ex.initCause(memerr);
-            throw ex;
+        } catch (OutOfMemoryError oome) {
+            throw genInvalidObjectException(oome, ifaces);
         } finally {
             depth--;
         }
@@ -2131,6 +2035,14 @@ public class ObjectInputStream
         handles.finish(descHandle);
         passHandle = descHandle;
         return desc;
+    }
+
+    // Generate an InvalidObjectException for an OutOfMemoryError
+    // Use String.concat() to avoid string formatting invoke dynamic
+    private static InvalidObjectException genInvalidObjectException(OutOfMemoryError oome,
+                                                                    String[] ifaces) {
+        return new InvalidObjectException("Proxy interface limit exceeded: "
+                .concat(Arrays.toString(ifaces)), oome);
     }
 
     /**
@@ -2154,19 +2066,16 @@ public class ObjectInputStream
         try {
             readDesc = readClassDescriptor();
         } catch (ClassNotFoundException ex) {
-            throw (IOException) new InvalidClassException(
-                "failed to read class descriptor").initCause(ex);
+            throw new InvalidClassException("failed to read class descriptor",
+                                            ex);
         }
 
         Class<?> cl = null;
         ClassNotFoundException resolveEx = null;
         bin.setBlockDataMode(true);
-        final boolean checksRequired = isCustomSubclass();
         try {
             if ((cl = resolveClass(readDesc)) == null) {
                 resolveEx = new ClassNotFoundException("null class");
-            } else if (checksRequired) {
-                ReflectUtil.checkPackageAccess(cl);
             }
         } catch (ClassNotFoundException ex) {
             resolveEx = ex;
@@ -2181,6 +2090,30 @@ public class ObjectInputStream
             totalObjectRefs++;
             depth++;
             desc.initNonProxy(readDesc, cl, resolveEx, readClassDesc(false));
+
+            if (cl != null) {
+                // Check that serial filtering has been done on the local class descriptor's superclass,
+                // in case it does not appear in the stream.
+
+                // Find the next super descriptor that has a local class descriptor.
+                // Descriptors for which there is no local class are ignored.
+                ObjectStreamClass superLocal = null;
+                for (ObjectStreamClass sDesc = desc.getSuperDesc(); sDesc != null; sDesc = sDesc.getSuperDesc()) {
+                    if ((superLocal = sDesc.getLocalDesc()) != null) {
+                        break;
+                    }
+                }
+
+                // Scan local descriptor superclasses for a match with the local descriptor of the super found above.
+                // For each super descriptor before the match, invoke the serial filter on the class.
+                // The filter is invoked for each class that has not already been filtered
+                // but would be filtered if the instance had been serialized by this Java runtime.
+                for (ObjectStreamClass lDesc = desc.getLocalDesc().getSuperDesc();
+                     lDesc != null && lDesc != superLocal;
+                     lDesc = lDesc.getSuperDesc()) {
+                    filterCheck(lDesc.forClass(), -1);
+                }
+            }
         } finally {
             depth--;
         }
@@ -2219,7 +2152,9 @@ public class ObjectInputStream
 
         ObjectStreamClass desc = readClassDesc(false);
         int len = bin.readInt();
-
+        if (len < 0) {
+            throw new StreamCorruptedException("Array length is negative");
+        }
         filterCheck(desc.forClass(), len);
 
         Object array = null;
@@ -2301,9 +2236,8 @@ public class ObjectInputStream
                 Enum<?> en = Enum.valueOf((Class)cl, name);
                 result = en;
             } catch (IllegalArgumentException ex) {
-                throw (IOException) new InvalidObjectException(
-                    "enum constant " + name + " does not exist in " +
-                    cl).initCause(ex);
+                throw new InvalidObjectException("enum constant " +
+                                                 name + " does not exist in " + cl, ex);
             }
             if (!unshared) {
                 handles.setObject(enumHandle, result);
@@ -2338,70 +2272,132 @@ public class ObjectInputStream
             throw new InvalidClassException("invalid class descriptor");
         }
 
-        Object obj;
-        try {
-            obj = desc.isInstantiable() ? desc.newInstance() : null;
-        } catch (Exception ex) {
-            throw (IOException) new InvalidClassException(
-                desc.forClass().getName(),
-                "unable to create instance").initCause(ex);
-        }
-
-        passHandle = handles.assign(unshared ? unsharedMarker : obj);
+        // Assign the handle and initially set to null or the unsharedMarker
+        passHandle = handles.assign(unshared ? unsharedMarker : null);
         ClassNotFoundException resolveEx = desc.getResolveException();
         if (resolveEx != null) {
             handles.markException(passHandle, resolveEx);
         }
 
-        final boolean isRecord = desc.isRecord();
-        if (isRecord) {
-            assert obj == null;
-            obj = readRecord(desc);
-            if (!unshared)
-                handles.setObject(passHandle, obj);
-        } else if (desc.isExternalizable()) {
-            readExternalData((Externalizable) obj, desc);
-        } else {
-            readSerialData(obj, desc);
-        }
+        try {
+            // Dispatch on the factory mode to read an object from the stream.
+            Object obj = switch (desc.factoryMode()) {
+                case READ_OBJECT_DEFAULT -> readSerialDefaultObject(desc, unshared);
+                case READ_OBJECT_CUSTOM -> readSerialCustomData(desc, unshared);
+                case READ_RECORD -> readRecord(desc, unshared);
+                case READ_EXTERNALIZABLE -> readExternalObject(desc, unshared);
+                case READ_OBJECT_VALUE -> readObjectValue(desc, unshared);
+                case READ_NO_LOCAL_CLASS -> readAbsentLocalClass(desc, unshared);
+                case null -> throw new AssertionError("Unknown factoryMode for: " + desc.getName(),
+                        resolveEx);
+            };
 
-        handles.finish(passHandle);
+            handles.finish(passHandle);
 
-        if (obj != null &&
-            handles.lookupException(passHandle) == null &&
-            desc.hasReadResolveMethod())
-        {
-            /* user code is invoked */
-            refreshLudcl = true;
-            Object rep = desc.invokeReadResolve(obj);
-            if (unshared && rep.getClass().isArray()) {
-                rep = cloneArray(rep);
-            }
-            if (rep != obj) {
-                // Filter the replacement object
-                if (rep != null) {
-                    if (rep.getClass().isArray()) {
-                        filterCheck(rep.getClass(), Array.getLength(rep));
-                    } else {
-                        filterCheck(rep.getClass(), -1);
-                    }
+            if (obj != null &&
+                handles.lookupException(passHandle) == null &&
+                desc.hasReadResolveMethod())
+            {
+                /* user code is invoked */
+                refreshLudcl = true;
+                Object rep = desc.invokeReadResolve(obj);
+                if (unshared && rep.getClass().isArray()) {
+                    rep = cloneArray(rep);
                 }
-                handles.setObject(passHandle, obj = rep);
+                if (rep != obj) {
+                    // Filter the replacement object
+                    if (rep != null) {
+                        if (rep.getClass().isArray()) {
+                            filterCheck(rep.getClass(), Array.getLength(rep));
+                        } else {
+                            filterCheck(rep.getClass(), -1);
+                        }
+                    }
+                    handles.setObject(passHandle, obj = rep);
+                }
             }
-        }
 
-        return obj;
+            return obj;
+        } catch (UncheckedIOException uioe) {
+            // Consistent re-throw for nested UncheckedIOExceptions
+            throw uioe.getCause();
+        }
     }
 
     /**
-     * If obj is non-null, reads externalizable data by invoking readExternal()
+     * {@return a value class instance by invoking its constructor with field values read from the stream.
+     * The fields of the class in the stream are matched to the local fields and applied to
+     * the constructor.
+     * If the stream contains superclasses with serializable fields,
+     * an InvalidClassException is thrown with an incompatible class change message.
+     *
+     * @param desc the class descriptor read from the stream, the local class is a value class
+     * @param unshared if the object is not to be shared
+     * @throws InvalidClassException if the stream contains a superclass with serializable fields.
+     * @throws IOException if there are I/O errors while reading from the
+     *         underlying {@code InputStream}
+     */
+    private Object readObjectValue(ObjectStreamClass desc, boolean unshared) throws IOException {
+        final ObjectStreamClass localDesc = desc.getLocalDesc();
+        TRACE("readObjectValue: %s, local class: %s", desc.getName(), localDesc.getName());
+        // Check for un-expected fields in superclasses
+        List<ClassDataSlot> slots = desc.getClassDataLayout();
+        for (int i = 0; i < slots.size()-1; i++) {
+            ClassDataSlot slot = slots.get(i);
+            if (slot.hasData && slot.desc.getFields(false).length > 0) {
+                throw new InvalidClassException("incompatible class change to value class: " +
+                        "stream class has non-empty super type: " + desc.getName());
+            }
+        }
+        // Read values for the value class fields
+        FieldValues fieldValues = new FieldValues(desc, true);
+
+        // Get value object constructor adapted to take primitive value buffer and object array.
+        MethodHandle consMH = ConstructorSupport.deserializationValueCons(desc);
+        try {
+            Object obj = (Object) consMH.invokeExact(fieldValues.primValues, fieldValues.objValues);
+            if (!unshared)
+                handles.setObject(passHandle, obj);
+            return obj;
+        } catch (Exception e) {
+            throw new InvalidObjectException(e.getMessage(), e);
+        } catch (Error e) {
+            throw e;
+        } catch (Throwable t) {
+            throw new InvalidObjectException("ReflectiveOperationException " +
+                    "during deserialization", t);
+        }
+    }
+
+    /**
+     * Creates a new object and invokes its readExternal method to read its contents.
+     *
+     * If the class is instantiable, read externalizable data by invoking readExternal()
      * method of obj; otherwise, attempts to skip over externalizable data.
      * Expects that passHandle is set to obj's handle before this method is
-     * called.
+     * called.  The new object is entered in the handle table immediately,
+     * allowing it to leak before it is completely read.
      */
-    private void readExternalData(Externalizable obj, ObjectStreamClass desc)
+    private Object readExternalObject(ObjectStreamClass desc, boolean unshared)
         throws IOException
     {
+        TRACE("readExternalObject: %s", desc.getName());
+
+        // For Externalizable objects,
+        // create the instance, publish the ref, and read the data
+        Externalizable obj = null;
+        try {
+            if (desc.isInstantiable()) {
+                obj = (Externalizable) desc.newInstance();
+            }
+        } catch (Exception ex) {
+            throw new InvalidClassException(desc.getName(),
+                    "unable to create instance", ex);
+        }
+
+        if (!unshared)
+            handles.setObject(passHandle, obj);
+
         SerialCallbackContext oldContext = curContext;
         if (oldContext != null)
             oldContext.check();
@@ -2445,165 +2441,256 @@ public class ObjectInputStream
          * externalizable data remains in the stream, a subsequent read will
          * most likely throw a StreamCorruptedException.
          */
+        return obj;
     }
 
-    /** Reads a record. */
-    private Object readRecord(ObjectStreamClass desc) throws IOException {
-        ObjectStreamClass.ClassDataSlot[] slots = desc.getClassDataLayout();
-        if (slots.length != 1) {
+    /**
+     * Reads and returns a record.
+     * If an exception is marked for any of the fields, the dependency
+     * mechanism marks the record as having an exception.
+     * Null is returned from readRecord and later the exception is thrown at
+     * the exit of {@link #readObject(Class)}.
+     */
+    private Object readRecord(ObjectStreamClass desc, boolean unshared) throws IOException {
+        TRACE("invoking readRecord: %s", desc.getName());
+        List<ClassDataSlot> slots = desc.getClassDataLayout();
+        if (slots.size() != 1) {
             // skip any superclass stream field values
-            for (int i = 0; i < slots.length-1; i++) {
-                if (slots[i].hasData) {
-                    new FieldValues(slots[i].desc, true);
+            for (int i = 0; i < slots.size()-1; i++) {
+                if (slots.get(i).hasData) {
+                    new FieldValues(slots.get(i).desc, true);
                 }
             }
         }
 
         FieldValues fieldValues = new FieldValues(desc, true);
+        if (handles.lookupException(passHandle) != null) {
+            return null;     // slot marked with exception, don't create record
+        }
 
         // get canonical record constructor adapted to take two arguments:
         // - byte[] primValues
         // - Object[] objValues
         // and return Object
-        MethodHandle ctrMH = RecordSupport.deserializationCtr(desc);
+        MethodHandle ctrMH = ConstructorSupport.deserializationCtr(desc);
 
         try {
-            return (Object) ctrMH.invokeExact(fieldValues.primValues, fieldValues.objValues);
+            Object obj = (Object) ctrMH.invokeExact(fieldValues.primValues, fieldValues.objValues);
+            if (!unshared)
+                handles.setObject(passHandle, obj);
+            return obj;
         } catch (Exception e) {
-            InvalidObjectException ioe = new InvalidObjectException(e.getMessage());
-            ioe.initCause(e);
-            throw ioe;
+            throw new InvalidObjectException(e.getMessage(), e);
         } catch (Error e) {
             throw e;
         } catch (Throwable t) {
-            ObjectStreamException ose = new InvalidObjectException(
-                    "ReflectiveOperationException during deserialization");
-            ose.initCause(t);
-            throw ose;
+            throw new InvalidObjectException("ReflectiveOperationException " +
+                                             "during deserialization", t);
         }
     }
 
     /**
-     * Reads (or attempts to skip, if obj is null or is tagged with a
-     * ClassNotFoundException) instance data for each serializable class of
-     * object in stream, from superclass to subclass.  Expects that passHandle
-     * is set to obj's handle before this method is called.
+     * Construct an object from the stream for a class that has only default read object behaviors.
+     * For each object, the fields are read before any are assigned.
+     * The new instance is entered in the handle table if it is unshared,
+     * allowing it to escape before it is initialized.
+     * The `readObject` and `readObjectNoData` methods are not present and are not called.
+     *
+     * @param desc the class descriptor
+     * @param unshared true if the object should be shared
+     * @return the object constructed from the stream data
+     * @throws IOException if there are I/O errors while reading from the
+     *         underlying {@code InputStream}
+     * @throws InvalidClassException if the instance creation fails
      */
-    private void readSerialData(Object obj, ObjectStreamClass desc)
+    private Object readSerialDefaultObject(ObjectStreamClass desc, boolean unshared)
+            throws IOException, InvalidClassException {
+        if (!desc.isInstantiable()) {
+            // No local class to create, read and discard
+            return readAbsentLocalClass(desc, unshared);
+        }
+        TRACE("readSerialDefaultObject: %s", desc.getName());
+        try {
+            final Object obj = desc.newInstance();
+            if (!unshared)
+                handles.setObject(passHandle, obj);
+
+            // Best effort Failure Atomicity; slotValues will be non-null if field
+            // values can be set after reading all field data in the hierarchy.
+            List<FieldValues> slotValues = desc.getClassDataLayout().stream()
+                    .filter(s -> s.hasData)
+                    .map(s1 -> {
+                        var values = new FieldValues(s1.desc, true);
+                        finishBlockData(s1.desc);
+                        return values;
+                    })
+                    .toList();
+
+            if (handles.lookupException(passHandle) != null) {
+                return null;    // some exception for a class, do not return the object
+            }
+
+            // Check that the types are assignable for all slots before assigning.
+            slotValues.forEach(v -> v.defaultCheckFieldValues(obj));
+            slotValues.forEach(v -> v.defaultSetFieldValues(obj));
+            return obj;
+        } catch (InstantiationException | InvocationTargetException ex) {
+            throw new InvalidClassException(desc.forClass().getName(),
+                    "unable to create instance", ex);
+        }
+    }
+
+
+    /**
+     * Reads (or attempts to skip, if not instantiatable or is tagged with a
+     * ClassNotFoundException) instance data for each serializable class of
+     * object in stream, from superclass to subclass.
+     * Expects that passHandle is set to current handle before this method is called.
+     */
+    private Object readSerialCustomData(ObjectStreamClass desc, boolean unshared)
         throws IOException
     {
-        ObjectStreamClass.ClassDataSlot[] slots = desc.getClassDataLayout();
-        // Best effort Failure Atomicity; slotValues will be non-null if field
-        // values can be set after reading all field data in the hierarchy.
-        // Field values can only be set after reading all data if there are no
-        // user observable methods in the hierarchy, readObject(NoData). The
-        // top most Serializable class in the hierarchy can be skipped.
-        FieldValues[] slotValues = null;
-
-        boolean hasSpecialReadMethod = false;
-        for (int i = 1; i < slots.length; i++) {
-            ObjectStreamClass slotDesc = slots[i].desc;
-            if (slotDesc.hasReadObjectMethod()
-                  || slotDesc.hasReadObjectNoDataMethod()) {
-                hasSpecialReadMethod = true;
-                break;
-            }
+        if (!desc.isInstantiable()) {
+            // No local class to create, read and discard
+            return readAbsentLocalClass(desc, unshared);
         }
-        // No special read methods, can store values and defer setting.
-        if (!hasSpecialReadMethod)
-            slotValues = new FieldValues[slots.length];
 
-        for (int i = 0; i < slots.length; i++) {
-            ObjectStreamClass slotDesc = slots[i].desc;
+        TRACE("readSerialCustomData: %s, ex: %s", desc.getName(), handles.lookupException(passHandle));
+        try {
+            Object obj = desc.newInstance();
+            if (!unshared)
+                handles.setObject(passHandle, obj);
+            // Read data into each of the slots for the class
+            return readSerialCustomSlots(obj, desc.getClassDataLayout());
+        } catch (InstantiationException | InvocationTargetException ex) {
+            throw new InvalidClassException(desc.forClass().getName(),
+                    "unable to create instance", ex);
+        }
+    }
 
-            if (slots[i].hasData) {
-                if (obj == null || handles.lookupException(passHandle) != null) {
-                    // Read fields of the current descriptor into a new FieldValues and discard
-                    new FieldValues(slotDesc, true);
-                } else if (slotDesc.hasReadObjectMethod()) {
-                    ThreadDeath t = null;
-                    boolean reset = false;
-                    SerialCallbackContext oldContext = curContext;
-                    if (oldContext != null)
-                        oldContext.check();
-                    try {
-                        curContext = new SerialCallbackContext(obj, slotDesc);
+    /**
+     * Reads from the stream using custom or default readObject methods appropriate.
+     * For each slot, either the custom readObject method or the default reader of fields
+     * is invoked. Unused slot specific custom data is discarded.
+     * This function is used by {@link #readSerialCustomData}.
+     *
+     * @param obj the object to assign the values to
+     * @param slots a list of slots to read from the stream
+     * @return the object being initialized
+     * @throws IOException if there are I/O errors while reading from the
+     *         underlying {@code InputStream}
+     */
+    private Object readSerialCustomSlots(Object obj, List<ClassDataSlot> slots) throws IOException {
+        TRACE("    readSerialCustomSlots: %s", slots);
 
-                        bin.setBlockDataMode(true);
-
-                        /* user code is invoked */
-                        refreshLudcl = true;
-                        slotDesc.invokeReadObject(obj, this);
-                    } catch (ClassNotFoundException ex) {
-                        /*
-                         * In most cases, the handle table has already
-                         * propagated a CNFException to passHandle at this
-                         * point; this mark call is included to address cases
-                         * where the custom readObject method has cons'ed and
-                         * thrown a new CNFException of its own.
-                         */
-                        handles.markException(passHandle, ex);
-                    } finally {
-                        do {
-                            try {
-                                curContext.setUsed();
-                                if (oldContext!= null)
-                                    oldContext.check();
-                                curContext = oldContext;
-                                reset = true;
-                            } catch (ThreadDeath x) {
-                                t = x;  // defer until reset is true
-                            }
-                        } while (!reset);
-                        if (t != null)
-                            throw t;
-                    }
-
-                    /*
-                     * defaultDataEnd may have been set indirectly by custom
-                     * readObject() method when calling defaultReadObject() or
-                     * readFields(); clear it to restore normal read behavior.
-                     */
-                    defaultDataEnd = false;
+        for (ClassDataSlot slot : slots) {
+            ObjectStreamClass slotDesc = slot.desc;
+            if (slot.hasData) {
+                if (slotDesc.hasReadObjectMethod() &&
+                        handles.lookupException(passHandle) == null) {
+                    // Invoke slot custom readObject method
+                    readSlotViaReadObject(obj, slotDesc);
                 } else {
                     // Read fields of the current descriptor into a new FieldValues
                     FieldValues values = new FieldValues(slotDesc, true);
-                    if (slotValues != null) {
-                        slotValues[i] = values;
-                    } else if (obj != null) {
+                    if (handles.lookupException(passHandle) == null) {
+                        // Set the instance fields if no previous exception
                         values.defaultCheckFieldValues(obj);
                         values.defaultSetFieldValues(obj);
                     }
-                }
-
-                if (slotDesc.hasWriteObjectData()) {
-                    skipCustomData();
-                } else {
-                    bin.setBlockDataMode(false);
+                    finishBlockData(slotDesc);
                 }
             } else {
-                if (obj != null &&
-                    slotDesc.hasReadObjectNoDataMethod() &&
-                    handles.lookupException(passHandle) == null)
-                {
-                    /* user code is invoked */
-                    refreshLudcl = true;
+                if (slotDesc.hasReadObjectNoDataMethod() &&
+                        handles.lookupException(passHandle) == null) {
                     slotDesc.invokeReadObjectNoData(obj);
                 }
             }
         }
+        return obj;
+    }
 
-        if (obj != null && slotValues != null) {
-            // Check that the non-primitive types are assignable for all slots
-            // before assigning.
-            for (int i = 0; i < slots.length; i++) {
-                if (slotValues[i] != null)
-                    slotValues[i].defaultCheckFieldValues(obj);
+    /**
+     * Invoke the readObject method of the class to read and store the state from the stream.
+     *
+     * @param obj an instance of the class being created, only partially initialized.
+     * @param slotDesc the ObjectStreamDescriptor for the current class
+     * @throws IOException if there are I/O errors while reading from the
+     *         underlying {@code InputStream}
+     */
+    private void readSlotViaReadObject(Object obj, ObjectStreamClass slotDesc) throws IOException {
+        TRACE("readSlotViaReadObject: %s", slotDesc.getName());
+        assert obj != null : "readSlotViaReadObject called when obj == null";
+
+        SerialCallbackContext oldContext = curContext;
+        if (oldContext != null)
+            oldContext.check();
+        try {
+            curContext = new SerialCallbackContext(obj, slotDesc);
+
+            bin.setBlockDataMode(true);
+            slotDesc.invokeReadObject(obj, this);
+        } catch (ClassNotFoundException ex) {
+            /*
+             * In most cases, the handle table has already
+             * propagated a CNFException to passHandle at this
+             * point; this mark call is included to address cases
+             * where the custom readObject method has cons'ed and
+             * thrown a new CNFException of its own.
+             */
+            handles.markException(passHandle, ex);
+        } finally {
+            curContext.setUsed();
+            if (oldContext!= null)
+                oldContext.check();
+            curContext = oldContext;
+        }
+
+        /*
+         * defaultDataEnd may have been set indirectly by custom
+         * readObject() method when calling defaultReadObject() or
+         * readFields(); clear it to restore normal read behavior.
+         */
+        defaultDataEnd = false;
+
+        finishBlockData(slotDesc);
+    }
+
+
+    /**
+     * Read and discard an entire object, leaving a null reference in the HandleTable.
+     * The descriptor of the class in the stream is used to read the fields from the stream.
+     * There is no instance in which to store the field values.
+     * Custom data following the fields of any slot is read and discarded.
+     * References to nested objects are read and retained in the
+     * handle table using the regular mechanism.
+     * Handles later in the stream may refer to the nested objects.
+     *
+     * @param desc the stream class descriptor
+     * @param unshared the unshared flag, ignored since no object is created
+     * @return null, no object is created
+     * @throws IOException if there are I/O errors while reading from the
+     *         underlying {@code InputStream}
+     */
+    private Object readAbsentLocalClass(ObjectStreamClass desc, boolean unshared)
+            throws IOException {
+        TRACE("readAbsentLocalClass: %s", desc.getName());
+        desc.getClassDataLayout().stream()
+                .filter(s -> s.hasData)
+                .forEach(s2 -> {new FieldValues(s2.desc, true); finishBlockData(s2.desc);});
+        return null;
+    }
+
+    // Finish handling of block data by skipping any remaining and setting BlockDataMode = false
+    private void finishBlockData(ObjectStreamClass slotDesc) throws UncheckedIOException {
+        try {
+            if (slotDesc.hasWriteObjectData()) {
+                skipCustomData();
+            } else {
+                bin.setBlockDataMode(false);
             }
-            for (int i = 0; i < slots.length; i++) {
-                if (slotValues[i] != null)
-                    slotValues[i].defaultSetFieldValues(obj);
-            }
+        } catch (IOException ioe) {
+            throw new UncheckedIOException(ioe);
         }
     }
 
@@ -2646,6 +2733,13 @@ public class ObjectInputStream
             throw new InternalError();
         }
         clear();
+        // Check that an object follows the TC_EXCEPTION typecode
+        byte tc = bin.peekByte();
+        if (tc != TC_OBJECT &&
+            tc != TC_REFERENCE) {
+            throw new StreamCorruptedException(
+                    String.format("invalid type code: %02X", tc));
+        }
         return (IOException) readObject0(Object.class, false);
     }
 
@@ -2692,32 +2786,38 @@ public class ObjectInputStream
          * @param desc the ObjectStreamClass to read
          * @param recordDependencies if true, record the dependencies
          *                           from current PassHandle and the object's read.
+         * @throws UncheckedIOException if any IOException occurs
          */
-        FieldValues(ObjectStreamClass desc, boolean recordDependencies) throws IOException {
-            this.desc = desc;
-
-            int primDataSize = desc.getPrimDataSize();
-            primValues = (primDataSize > 0) ? new byte[primDataSize] : null;
-            if (primDataSize > 0) {
-                bin.readFully(primValues, 0, primDataSize, false);
-            }
-
-            int numObjFields = desc.getNumObjFields();
-            objValues = (numObjFields > 0) ? new Object[numObjFields] : null;
-            objHandles = (numObjFields > 0) ? new int[numObjFields] : null;
-            if (numObjFields > 0) {
-                int objHandle = passHandle;
-                ObjectStreamField[] fields = desc.getFields(false);
-                int numPrimFields = fields.length - objValues.length;
-                for (int i = 0; i < objValues.length; i++) {
-                    ObjectStreamField f = fields[numPrimFields + i];
-                    objValues[i] = readObject0(Object.class, f.isUnshared());
-                    objHandles[i] = passHandle;
-                    if (recordDependencies && f.getField() != null) {
-                        handles.markDependency(objHandle, passHandle);
-                    }
+        FieldValues(ObjectStreamClass desc, boolean recordDependencies) throws UncheckedIOException {
+            try {
+                this.desc = desc;
+                TRACE("    reading FieldValues: %s", desc.getName());
+                int primDataSize = desc.getPrimDataSize();
+                primValues = (primDataSize > 0) ? new byte[primDataSize] : null;
+                if (primDataSize > 0) {
+                    bin.readFully(primValues, 0, primDataSize, false);
                 }
-                passHandle = objHandle;
+
+
+                int numObjFields = desc.getNumObjFields();
+                objValues = (numObjFields > 0) ? new Object[numObjFields] : null;
+                objHandles = (numObjFields > 0) ? new int[numObjFields] : null;
+                if (numObjFields > 0) {
+                    int objHandle = passHandle;
+                    ObjectStreamField[] fields = desc.getFields(false);
+                    int numPrimFields = fields.length - objValues.length;
+                    for (int i = 0; i < objValues.length; i++) {
+                        ObjectStreamField f = fields[numPrimFields + i];
+                        objValues[i] = readObject0(Object.class, f.isUnshared());
+                        objHandles[i] = passHandle;
+                        if (recordDependencies && f.getField() != null) {
+                            handles.markDependency(objHandle, passHandle);
+                        }
+                    }
+                    passHandle = objHandle;
+                }
+            } catch (IOException ioe) {
+                throw new UncheckedIOException(ioe);
             }
         }
 
@@ -2731,7 +2831,7 @@ public class ObjectInputStream
 
         public boolean get(String name, boolean val) {
             int off = getFieldOffset(name, Boolean.TYPE);
-            return (off >= 0) ? Bits.getBoolean(primValues, off) : val;
+            return (off >= 0) ? ByteArray.getBoolean(primValues, off) : val;
         }
 
         public byte get(String name, byte val) {
@@ -2741,41 +2841,47 @@ public class ObjectInputStream
 
         public char get(String name, char val) {
             int off = getFieldOffset(name, Character.TYPE);
-            return (off >= 0) ? Bits.getChar(primValues, off) : val;
+            return (off >= 0) ? ByteArray.getChar(primValues, off) : val;
         }
 
         public short get(String name, short val) {
             int off = getFieldOffset(name, Short.TYPE);
-            return (off >= 0) ? Bits.getShort(primValues, off) : val;
+            return (off >= 0) ? ByteArray.getShort(primValues, off) : val;
         }
 
         public int get(String name, int val) {
             int off = getFieldOffset(name, Integer.TYPE);
-            return (off >= 0) ? Bits.getInt(primValues, off) : val;
+            return (off >= 0) ? ByteArray.getInt(primValues, off) : val;
         }
 
         public float get(String name, float val) {
             int off = getFieldOffset(name, Float.TYPE);
-            return (off >= 0) ? Bits.getFloat(primValues, off) : val;
+            return (off >= 0) ? ByteArray.getFloat(primValues, off) : val;
         }
 
         public long get(String name, long val) {
             int off = getFieldOffset(name, Long.TYPE);
-            return (off >= 0) ? Bits.getLong(primValues, off) : val;
+            return (off >= 0) ? ByteArray.getLong(primValues, off) : val;
         }
 
         public double get(String name, double val) {
             int off = getFieldOffset(name, Double.TYPE);
-            return (off >= 0) ? Bits.getDouble(primValues, off) : val;
+            return (off >= 0) ? ByteArray.getDouble(primValues, off) : val;
         }
 
-        public Object get(String name, Object val) {
+        public Object get(String name, Object val) throws ClassNotFoundException {
             int off = getFieldOffset(name, Object.class);
             if (off >= 0) {
                 int objHandle = objHandles[off];
                 handles.markDependency(passHandle, objHandle);
-                return (handles.lookupException(objHandle) == null) ?
-                    objValues[off] : null;
+                ClassNotFoundException ex = handles.lookupException(objHandle);
+                if (ex == null)
+                    return objValues[off];
+                if (Caches.GETFIELD_CNFE_RETURNS_NULL) {
+                    // Revert to the prior behavior; return null instead of CNFE
+                    return null;
+                }
+                throw ex;
             } else {
                 return val;
             }
@@ -2826,16 +2932,11 @@ public class ObjectInputStream
             final ObjectInputValidation obj;
             final int priority;
             Callback next;
-            @SuppressWarnings("removal")
-            final AccessControlContext acc;
 
-            Callback(ObjectInputValidation obj, int priority, Callback next,
-                @SuppressWarnings("removal") AccessControlContext acc)
-            {
+            Callback(ObjectInputValidation obj, int priority, Callback next) {
                 this.obj = obj;
                 this.priority = priority;
                 this.next = next;
-                this.acc = acc;
             }
         }
 
@@ -2864,12 +2965,10 @@ public class ObjectInputStream
                 prev = cur;
                 cur = cur.next;
             }
-            @SuppressWarnings("removal")
-            AccessControlContext acc = AccessController.getContext();
             if (prev != null) {
-                prev.next = new Callback(obj, priority, cur, acc);
+                prev.next = new Callback(obj, priority, cur);
             } else {
-                list = new Callback(obj, priority, list, acc);
+                list = new Callback(obj, priority, list);
             }
         }
 
@@ -2880,23 +2979,15 @@ public class ObjectInputStream
          * throws an InvalidObjectException, the callback process is terminated
          * and the exception propagated upwards.
          */
-        @SuppressWarnings("removal")
         void doCallbacks() throws InvalidObjectException {
             try {
                 while (list != null) {
-                    AccessController.doPrivileged(
-                        new PrivilegedExceptionAction<Void>()
-                    {
-                        public Void run() throws InvalidObjectException {
-                            list.obj.validateObject();
-                            return null;
-                        }
-                    }, list.acc);
+                    list.obj.validateObject();
                     list = list.next;
                 }
-            } catch (PrivilegedActionException ex) {
+            } catch (InvalidObjectException ex) {
                 list = null;
-                throw (InvalidObjectException) ex.getException();
+                throw ex;
             }
         }
 
@@ -3093,6 +3184,8 @@ public class ObjectInputStream
         private static final int CHAR_BUF_SIZE = 256;
         /** readBlockHeader() return value indicating header read may block */
         private static final int HEADER_BLOCKED = -2;
+        /** access to internal methods to count ASCII and inflate latin1/ASCII bytes to char */
+        private static final JavaLangAccess JLA = SharedSecrets.getJavaLangAccess();
 
         /** buffer for reading general/block data */
         private final byte[] buf = new byte[MAX_BLOCK_SIZE];
@@ -3208,7 +3301,7 @@ public class ObjectInputStream
                                 return HEADER_BLOCKED;
                             }
                             in.readFully(hbuf, 0, 5);
-                            int len = Bits.getInt(hbuf, 1);
+                            int len = ByteArray.getInt(hbuf, 1);
                             if (len < 0) {
                                 throw new StreamCorruptedException(
                                     "illegal block data header length: " +
@@ -3507,7 +3600,7 @@ public class ObjectInputStream
             } else if (end - pos < 2) {
                 return din.readChar();
             }
-            char v = Bits.getChar(buf, pos);
+            char v = ByteArray.getChar(buf, pos);
             pos += 2;
             return v;
         }
@@ -3519,7 +3612,7 @@ public class ObjectInputStream
             } else if (end - pos < 2) {
                 return din.readShort();
             }
-            short v = Bits.getShort(buf, pos);
+            short v = ByteArray.getShort(buf, pos);
             pos += 2;
             return v;
         }
@@ -3531,7 +3624,7 @@ public class ObjectInputStream
             } else if (end - pos < 2) {
                 return din.readUnsignedShort();
             }
-            int v = Bits.getShort(buf, pos) & 0xFFFF;
+            int v = ByteArray.getShort(buf, pos) & 0xFFFF;
             pos += 2;
             return v;
         }
@@ -3543,7 +3636,7 @@ public class ObjectInputStream
             } else if (end - pos < 4) {
                 return din.readInt();
             }
-            int v = Bits.getInt(buf, pos);
+            int v = ByteArray.getInt(buf, pos);
             pos += 4;
             return v;
         }
@@ -3555,7 +3648,7 @@ public class ObjectInputStream
             } else if (end - pos < 4) {
                 return din.readFloat();
             }
-            float v = Bits.getFloat(buf, pos);
+            float v = ByteArray.getFloat(buf, pos);
             pos += 4;
             return v;
         }
@@ -3567,7 +3660,7 @@ public class ObjectInputStream
             } else if (end - pos < 8) {
                 return din.readLong();
             }
-            long v = Bits.getLong(buf, pos);
+            long v = ByteArray.getLong(buf, pos);
             pos += 8;
             return v;
         }
@@ -3579,7 +3672,7 @@ public class ObjectInputStream
             } else if (end - pos < 8) {
                 return din.readDouble();
             }
-            double v = Bits.getDouble(buf, pos);
+            double v = ByteArray.getDouble(buf, pos);
             pos += 8;
             return v;
         }
@@ -3617,7 +3710,7 @@ public class ObjectInputStream
                 }
 
                 while (off < stop) {
-                    v[off++] = Bits.getBoolean(buf, pos++);
+                    v[off++] = ByteArray.getBoolean(buf, pos++);
                 }
             }
         }
@@ -3638,7 +3731,7 @@ public class ObjectInputStream
                 }
 
                 while (off < stop) {
-                    v[off++] = Bits.getChar(buf, pos);
+                    v[off++] = ByteArray.getChar(buf, pos);
                     pos += 2;
                 }
             }
@@ -3660,7 +3753,7 @@ public class ObjectInputStream
                 }
 
                 while (off < stop) {
-                    v[off++] = Bits.getShort(buf, pos);
+                    v[off++] = ByteArray.getShort(buf, pos);
                     pos += 2;
                 }
             }
@@ -3682,7 +3775,7 @@ public class ObjectInputStream
                 }
 
                 while (off < stop) {
-                    v[off++] = Bits.getInt(buf, pos);
+                    v[off++] = ByteArray.getInt(buf, pos);
                     pos += 4;
                 }
             }
@@ -3704,7 +3797,7 @@ public class ObjectInputStream
                 }
 
                 while (off < stop) {
-                    v[off++] = Bits.getFloat(buf, pos);
+                    v[off++] = ByteArray.getFloat(buf, pos);
                     pos += 4;
                 }
             }
@@ -3726,7 +3819,7 @@ public class ObjectInputStream
                 }
 
                 while (off < stop) {
-                    v[off++] = Bits.getLong(buf, pos);
+                    v[off++] = ByteArray.getLong(buf, pos);
                     pos += 8;
                 }
             }
@@ -3748,7 +3841,7 @@ public class ObjectInputStream
                 }
 
                 while (off < stop) {
-                    v[off++] = Bits.getDouble(buf, pos);
+                    v[off++] = ByteArray.getDouble(buf, pos);
                     pos += 8;
                 }
             }
@@ -3769,8 +3862,32 @@ public class ObjectInputStream
          * utflen bytes.
          */
         private String readUTFBody(long utflen) throws IOException {
+            if (!blkmode) {
+                end = pos = 0;
+            }
+
             StringBuilder sbuf;
             if (utflen > 0 && utflen < Integer.MAX_VALUE) {
+                // Scan for leading ASCII chars
+                int avail = end - pos;
+                int ascii = JLA.countPositives(buf, pos, Math.min(avail, (int)utflen));
+                if (ascii == utflen) {
+                    // Complete match, consume the buf[pos ... pos + ascii] range and return.
+                    // Modified UTF-8 and ISO-8859-1 are both ASCII-compatible encodings bytes
+                    // thus we can treat the range as ISO-8859-1 and avoid a redundant scan
+                    // in the String constructor
+                    String utf = new String(buf, pos, ascii, StandardCharsets.ISO_8859_1);
+                    pos += ascii;
+                    return utf;
+                }
+                // Avoid allocating a StringBuilder if there's enough data in buf and
+                // cbuf is large enough
+                if (avail >= utflen && utflen <= CHAR_BUF_SIZE) {
+                    JLA.inflateBytesToChars(buf, pos, cbuf, 0, ascii);
+                    pos += ascii;
+                    int cbufPos = readUTFSpan(ascii, utflen - ascii);
+                    return new String(cbuf, 0, cbufPos);
+                }
                 // a reasonable initial capacity based on the UTF length
                 int initialCapacity = Math.min((int)utflen, 0xFFFF);
                 sbuf = new StringBuilder(initialCapacity);
@@ -3778,14 +3895,14 @@ public class ObjectInputStream
                 sbuf = new StringBuilder();
             }
 
-            if (!blkmode) {
-                end = pos = 0;
-            }
-
             while (utflen > 0) {
                 int avail = end - pos;
                 if (avail >= 3 || (long) avail == utflen) {
-                    utflen -= readUTFSpan(sbuf, utflen);
+                    int cbufPos = readUTFSpan(0, utflen);
+                    // pos has advanced: adjust utflen by the difference in
+                    // available bytes
+                    utflen -= avail - (end - pos);
+                    sbuf.append(cbuf, 0, cbufPos);
                 } else {
                     if (blkmode) {
                         // near block boundary, read one byte at a time
@@ -3807,18 +3924,17 @@ public class ObjectInputStream
 
         /**
          * Reads span of UTF-encoded characters out of internal buffer
-         * (starting at offset pos and ending at or before offset end),
-         * consuming no more than utflen bytes.  Appends read characters to
-         * sbuf.  Returns the number of bytes consumed.
+         * (starting at offset pos), consuming no more than utflen bytes.
+         * Appends read characters to cbuf. Returns the current position
+         * in cbuf.
          */
-        private long readUTFSpan(StringBuilder sbuf, long utflen)
+        private int readUTFSpan(int cpos, long utflen)
             throws IOException
         {
-            int cpos = 0;
             int start = pos;
             int avail = Math.min(end - pos, CHAR_BUF_SIZE);
             // stop short of last char unless all of utf bytes in buffer
-            int stop = pos + ((utflen > avail) ? avail - 2 : (int) utflen);
+            int stop = start + ((utflen > avail) ? avail - 2 : (int) utflen);
             boolean outOfBounds = false;
 
             try {
@@ -3863,9 +3979,7 @@ public class ObjectInputStream
                     throw new UTFDataFormatException();
                 }
             }
-
-            sbuf.append(cbuf, 0, cpos);
-            return pos - start;
+            return cpos;
         }
 
         /**
@@ -3919,8 +4033,7 @@ public class ObjectInputStream
         }
 
         /**
-         * Returns the number of bytes read from the input stream.
-         * @return the number of bytes read from the input stream
+         * {@return the number of bytes read from the input stream}
          */
         long getBytesRead() {
             return in.getBytesRead();
@@ -3956,7 +4069,7 @@ public class ObjectInputStream
      * as memory conservation, it does not enforce this constraint.
      */
     // REMIND: add full description of exception propagation algorithm?
-    private static class HandleTable {
+    private static final class HandleTable {
 
         /* status codes indicating whether object has associated exception */
         private static final byte STATUS_OK = 1;
