@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1996, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1996, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -40,9 +40,6 @@
 
 package sun.util.resources;
 
-import java.security.AccessController;
-import java.security.PrivilegedAction;
-import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
@@ -178,34 +175,22 @@ public class LocaleData {
         return getBundle(type.getTextResourcesPackage() + ".FormatData", locale);
     }
 
-    @SuppressWarnings("removal")
     public static ResourceBundle getBundle(final String baseName, final Locale locale) {
-        return AccessController.doPrivileged(new PrivilegedAction<>() {
-            @Override
-            public ResourceBundle run() {
-                return Bundles.of(baseName, locale, LocaleDataStrategy.INSTANCE);
-            }
-        });
+        return Bundles.of(baseName, locale, LocaleDataStrategy.INSTANCE);
     }
 
-    @SuppressWarnings("removal")
     private static OpenListResourceBundle getSupplementary(final String baseName, final Locale locale) {
-        return AccessController.doPrivileged(new PrivilegedAction<>() {
-           @Override
-           public OpenListResourceBundle run() {
-               OpenListResourceBundle rb = null;
-               try {
-                   rb = (OpenListResourceBundle) Bundles.of(baseName, locale,
-                                                            SupplementaryStrategy.INSTANCE);
-               } catch (MissingResourceException e) {
-                   // return null if no supplementary is available
-               }
-               return rb;
-           }
-        });
+       OpenListResourceBundle rb = null;
+       try {
+           rb = (OpenListResourceBundle) Bundles.of(baseName, locale,
+                                                    SupplementaryStrategy.INSTANCE);
+       } catch (MissingResourceException e) {
+           // return null if no supplementary is available
+       }
+       return rb;
     }
 
-    private static abstract class LocaleDataResourceBundleProvider
+    private abstract static class LocaleDataResourceBundleProvider
                                             implements ResourceBundleProvider {
         /**
          * Changes baseName to its module dependent package name and
@@ -231,14 +216,14 @@ public class LocaleData {
      * A ResourceBundleProvider implementation for loading locale data
      * resource bundles except for the java.time supplementary data.
      */
-    public static abstract class CommonResourceBundleProvider extends LocaleDataResourceBundleProvider {
+    public abstract static class CommonResourceBundleProvider extends LocaleDataResourceBundleProvider {
     }
 
     /**
      * A ResourceBundleProvider implementation for loading supplementary
      * resource bundles for java.time.
      */
-    public static abstract class SupplementaryResourceBundleProvider extends LocaleDataResourceBundleProvider {
+    public abstract static class SupplementaryResourceBundleProvider extends LocaleDataResourceBundleProvider {
     }
 
     // Bundles.Strategy implementations
@@ -246,15 +231,15 @@ public class LocaleData {
     private static class LocaleDataStrategy implements Bundles.Strategy {
         private static final LocaleDataStrategy INSTANCE = new LocaleDataStrategy();
         // TODO: avoid hard-coded Locales
-        private static Set<Locale> JAVA_BASE_LOCALES
-            = Set.of(Locale.ROOT, Locale.ENGLISH, Locale.US, new Locale("en", "US", "POSIX"));
+        private static final Set<Locale> JAVA_BASE_LOCALES
+            = Set.of(Locale.ROOT, Locale.ENGLISH, Locale.US, Locale.of("en", "US", "POSIX"));
 
         private LocaleDataStrategy() {
         }
 
         /*
          * This method overrides the default implementation to search
-         * from a prebaked locale string list to determin the candidate
+         * from a prebaked locale string list to determine the candidate
          * locale list.
          *
          * @param baseName the resource bundle base name.
@@ -325,7 +310,7 @@ public class LocaleData {
         private static final SupplementaryStrategy INSTANCE
                 = new SupplementaryStrategy();
         // TODO: avoid hard-coded Locales
-        private static Set<Locale> JAVA_BASE_LOCALES
+        private static final Set<Locale> JAVA_BASE_LOCALES
             = Set.of(Locale.ROOT, Locale.ENGLISH, Locale.US);
 
         private SupplementaryStrategy() {
@@ -333,8 +318,8 @@ public class LocaleData {
 
         @Override
         public List<Locale> getCandidateLocales(String baseName, Locale locale) {
-            // Specifiy only the given locale
-            return Arrays.asList(locale);
+            // Specify only the given locale
+            return List.of(locale);
         }
 
         @Override
