@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,14 +27,18 @@
  * @summary Hello World test for using inline classes with CDS
  * @requires vm.cds
  * @library /test/lib /test/hotspot/jtreg/runtime/cds/appcds/test-classes
- * @build HelloInlineClassApp
- * @run driver jdk.test.lib.helpers.ClassFileInstaller -jar hello_inline.jar HelloInlineClassApp HelloInlineClassApp$Point HelloInlineClassApp$Rectangle
- * @run driver HelloInlineClassTest
+ * @enablePreview
+ * @modules java.base/jdk.internal.value
+ *          java.base/jdk.internal.vm.annotation
+ * @compile test-classes/HelloInlineClassApp.java
+ * @run driver jdk.test.lib.helpers.ClassFileInstaller -jar hello_inline.jar
+ *          HelloInlineClassApp HelloInlineClassApp$Point
+ *          HelloInlineClassApp$Rectangle HelloInlineClassApp$ValueRecord
+ * @run main/othervm HelloInlineClassTest
  */
 
 import jdk.test.lib.helpers.ClassFileInstaller;
 import jdk.test.lib.process.OutputAnalyzer;
-
 public class HelloInlineClassTest {
     public static void main(String[] args) throws Exception {
         String appJar = ClassFileInstaller.getJarPath("hello_inline.jar");
@@ -42,29 +46,35 @@ public class HelloInlineClassTest {
         OutputAnalyzer output =
             TestCommon.dump(appJar, TestCommon.list(mainClass,
                                                     "HelloInlineClassApp$Point",
-                                                    "HelloInlineClassApp$Rectangle"));
+                                                    "HelloInlineClassApp$Rectangle"),
+                            "--enable-preview");
         output.shouldHaveExitValue(0);
 
-        TestCommon.run("-Xint", "-cp", appJar,  mainClass)
+        TestCommon.run("--enable-preview",
+                       "-Xint", "-cp", appJar,  mainClass)
             .assertNormalExit();
 
-        TestCommon.run("-cp", appJar,  mainClass)
+        TestCommon.run("--enable-preview",
+                       "-cp", appJar,  mainClass)
             .assertNormalExit();
 
         String compFlag = "-XX:CompileCommand=compileonly,HelloInlineClassApp*::*";
 
-        TestCommon.run("-Xcomp", compFlag,
+        TestCommon.run("--enable-preview",
+                       "-Xcomp", compFlag,
                        "-cp", appJar,  mainClass)
             .assertNormalExit();
 
-        TestCommon.run("-Xcomp", compFlag,
+        TestCommon.run("--enable-preview",
+                       "-Xcomp", compFlag,
                        "-XX:TieredStopAtLevel=1",
                        "-XX:+TieredCompilation",
                        "-XX:-Inline",
                        "-cp", appJar,  mainClass)
             .assertNormalExit();
 
-        TestCommon.run("-Xcomp", compFlag,
+        TestCommon.run("--enable-preview",
+                       "-Xcomp", compFlag,
                        "-XX:TieredStopAtLevel=4",
                        "-XX:-TieredCompilation",
                        "-XX:-Inline",
