@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,72 +23,97 @@
 
 package runtime.valhalla.inlinetypes;
 
+import java.lang.constant.ClassDesc;
+import java.lang.constant.MethodTypeDesc;
 import java.lang.invoke.*;
 import java.lang.ref.*;
 import java.util.concurrent.*;
 
+import jdk.internal.value.ValueClass;
+import jdk.internal.vm.annotation.ImplicitlyConstructible;
+import jdk.internal.vm.annotation.LooselyConsistentValue;
+import jdk.internal.vm.annotation.NullRestricted;
+
 import static jdk.test.lib.Asserts.*;
 import jdk.test.lib.Utils;
-import sun.hotspot.WhiteBox;
+import jdk.test.whitebox.WhiteBox;
+import runtime.valhalla.inlinetypes.InlineOops.FooValue;
 import test.java.lang.invoke.lib.InstructionHelper;
+import static test.java.lang.invoke.lib.InstructionHelper.classDesc;
 
 /**
- * @test InlineOops_int_Serial
+ * @test id=Serial
  * @requires vm.gc.Serial
  * @summary Test embedding oops into Inline types
- * @library /test/lib /test/jdk/lib/testlibrary/bytecode /test/jdk/java/lang/invoke/common
- * @build jdk.experimental.bytecode.BasicClassBuilder test.java.lang.invoke.lib.InstructionHelper
- * @compile -XDallowWithFieldOperator Person.java
- * @compile -XDallowWithFieldOperator InlineOops.java
- * @run driver jdk.test.lib.helpers.ClassFileInstaller sun.hotspot.WhiteBox
- *                   sun.hotspot.WhiteBox$WhiteBoxPermission
- * @run main/othervm -XX:+UseSerialGC -Xmx128m -XX:InlineFieldMaxFlatSize=128
+ * @modules java.base/jdk.internal.value
+ *          java.base/jdk.internal.vm.annotation
+ * @library /test/lib /test/jdk/java/lang/invoke/common
+ * @enablePreview
+ * @compile Person.java InlineOops.java
+ * @run driver jdk.test.lib.helpers.ClassFileInstaller jdk.test.whitebox.WhiteBox
+ * @run main/othervm -XX:+UseSerialGC -Xmx128m -XX:+UseFieldFlattening
  *                   -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI
  *                   runtime.valhalla.inlinetypes.InlineOops
  */
 
 /**
- * @test InlineOops_int_G1
+ * @test id=G1
  * @requires vm.gc.G1
  * @summary Test embedding oops into Inline types
- * @library /test/lib /test/jdk/lib/testlibrary/bytecode /test/jdk/java/lang/invoke/common
- * @build jdk.experimental.bytecode.BasicClassBuilder test.java.lang.invoke.lib.InstructionHelper
- * @compile -XDallowWithFieldOperator Person.java
- * @compile -XDallowWithFieldOperator InlineOops.java
- * @run driver jdk.test.lib.helpers.ClassFileInstaller sun.hotspot.WhiteBox
- *                   sun.hotspot.WhiteBox$WhiteBoxPermission
- * @run main/othervm -XX:+UseG1GC -Xmx128m -XX:InlineFieldMaxFlatSize=128
+ * @modules java.base/jdk.internal.value
+ *          java.base/jdk.internal.vm.annotation
+ * @library /test/lib /test/jdk/java/lang/invoke/common
+ * @enablePreview
+ * @compile Person.java InlineOops.java
+ * @run driver jdk.test.lib.helpers.ClassFileInstaller jdk.test.whitebox.WhiteBox
+ * @run main/othervm -XX:+UseG1GC -Xmx128m -XX:+UseFieldFlattening
  *                   -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI
  *                   runtime.valhalla.inlinetypes.InlineOops 20
  */
 
 /**
- * @test InlineOops_int_Parallel
+ * @test id=Parallel
  * @requires vm.gc.Parallel
  * @summary Test embedding oops into Inline types
- * @library /test/lib /test/jdk/lib/testlibrary/bytecode /test/jdk/java/lang/invoke/common
- * @build jdk.experimental.bytecode.BasicClassBuilder test.java.lang.invoke.lib.InstructionHelper
- * @compile -XDallowWithFieldOperator Person.java
- * @compile -XDallowWithFieldOperator InlineOops.java
- * @run driver jdk.test.lib.helpers.ClassFileInstaller sun.hotspot.WhiteBox
- *                   sun.hotspot.WhiteBox$WhiteBoxPermission
- * @run main/othervm -XX:+UseParallelGC -Xmx128m -XX:InlineFieldMaxFlatSize=128
+ * @modules java.base/jdk.internal.value
+ *          java.base/jdk.internal.vm.annotation
+ * @library /test/lib /test/jdk/java/lang/invoke/common
+ * @enablePreview
+ * @compile Person.java InlineOops.java
+ * @run driver jdk.test.lib.helpers.ClassFileInstaller jdk.test.whitebox.WhiteBox
+ * @run main/othervm -XX:+UseParallelGC -Xmx128m -XX:+UseFieldFlattening
  *                   -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI
  *                   runtime.valhalla.inlinetypes.InlineOops
  */
 
 /**
- * @test InlineOops_int_Z
+ * @test id=Z
  * @requires vm.gc.Z
  * @summary Test embedding oops into Inline types
- * @library /test/lib /test/jdk/lib/testlibrary/bytecode /test/jdk/java/lang/invoke/common
- * @build jdk.experimental.bytecode.BasicClassBuilder test.java.lang.invoke.lib.InstructionHelper
- * @compile -XDallowWithFieldOperator Person.java
- * @compile -XDallowWithFieldOperator InlineOops.java
- * @run driver jdk.test.lib.helpers.ClassFileInstaller sun.hotspot.WhiteBox
- *                   sun.hotspot.WhiteBox$WhiteBoxPermission
+ * @modules java.base/jdk.internal.value
+ *          java.base/jdk.internal.vm.annotation
+ * @library /test/lib /test/jdk/java/lang/invoke/common
+ * @enablePreview
+ * @compile Person.java InlineOops.java
+ * @run driver jdk.test.lib.helpers.ClassFileInstaller jdk.test.whitebox.WhiteBox
  * @run main/othervm -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -Xmx128m
- *                   -XX:+UnlockDiagnosticVMOptions -XX:+ZVerifyViews -XX:InlineFieldMaxFlatSize=128
+ *                   -XX:+UnlockDiagnosticVMOptions -XX:+UseFieldFlattening
+ *                   -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI
+ *                   runtime.valhalla.inlinetypes.InlineOops
+ */
+
+/**
+ * @test id=ZXint
+ * @requires vm.gc.Z
+ * @summary Test embedding oops into Inline types (sanity check with interpreter only the most complex GC)
+ * @modules java.base/jdk.internal.value
+ *          java.base/jdk.internal.vm.annotation
+ * @library /test/lib /test/jdk/java/lang/invoke/common
+ * @enablePreview
+ * @compile Person.java InlineOops.java
+ * @run driver jdk.test.lib.helpers.ClassFileInstaller jdk.test.whitebox.WhiteBox
+ * @run main/othervm -Xint -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -Xmx128m
+ *                   -XX:+UnlockDiagnosticVMOptions -XX:+UseFieldFlattening
  *                   -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI
  *                   runtime.valhalla.inlinetypes.InlineOops
  */
@@ -106,7 +131,9 @@ public class InlineOops {
     static final String TEST_STRING1 = "Test String 1";
     static final String TEST_STRING2 = "Test String 2";
 
-    static boolean USE_COMPILER = WhiteBox.getWhiteBox().getBooleanVMFlag("UseCompiler");
+    static WhiteBox WB = WhiteBox.getWhiteBox();
+
+    static boolean USE_COMPILER = WB.getBooleanVMFlag("UseCompiler");
 
     static MethodHandles.Lookup LOOKUP = MethodHandles.lookup();
 
@@ -140,24 +167,23 @@ public class InlineOops {
 
 
     static class Couple {
+        @NullRestricted
         public Person onePerson;
+        @NullRestricted
         public Person otherPerson;
     }
 
-    static final primitive class Composition {
-        public final Person onePerson;
-        public final Person otherPerson;
+    @ImplicitlyConstructible
+    @LooselyConsistentValue
+    static value class Composition {
+        @NullRestricted
+        public Person onePerson;
+        @NullRestricted
+        public Person otherPerson;
 
-        private Composition() {
-            onePerson   = Person.create(0, null, null);
-            otherPerson = Person.create(0, null, null);
-        }
-
-        public static Composition create(Person onePerson, Person otherPerson) {
-            Composition comp = Composition.default;
-            comp = __WithField(comp.onePerson, onePerson);
-            comp = __WithField(comp.otherPerson, otherPerson);
-            return comp;
+        public Composition(Person onePerson, Person otherPerson) {
+            this.onePerson = onePerson;
+            this.otherPerson = otherPerson;
         }
     }
 
@@ -170,7 +196,7 @@ public class InlineOops {
 
         // anewarray, aaload, aastore
         int index = 7;
-        Person[] array =  new Person[NOF_PEOPLE];
+        Person[] array = (Person[])ValueClass.newNullRestrictedArray(Person.class, NOF_PEOPLE);
         validateDefaultPerson(array[index]);
 
         // Now with refs...
@@ -190,7 +216,7 @@ public class InlineOops {
         couple.onePerson = createIndexedPerson(index);
         validateIndexedPerson(couple.onePerson, index);
 
-        Composition composition = Composition.create(couple.onePerson, couple.onePerson);
+        Composition composition = new Composition(couple.onePerson, couple.onePerson);
         validateIndexedPerson(composition.onePerson, index);
         validateIndexedPerson(composition.otherPerson, index);
     }
@@ -199,7 +225,7 @@ public class InlineOops {
      * Check oop map generation for klass layout and frame...
      */
     public static void testOopMaps() {
-        Object[] objects = WhiteBox.getWhiteBox().getObjectsViaKlassOopMaps(new Couple());
+        Object[] objects = WB.getObjectsViaKlassOopMaps(new Couple());
         assertTrue(objects.length == 4, "Expected 4 oops");
         for (int i = 0; i < objects.length; i++) {
             assertTrue(objects[i] == null, "not-null");
@@ -210,16 +236,16 @@ public class InlineOops {
         String fn2 = "Jane";
         String ln2 = "Jones";
         Couple couple = new Couple();
-        couple.onePerson = Person.create(0, fn1, ln1);
-        couple.otherPerson = Person.create(1, fn2, ln2);
-        objects = WhiteBox.getWhiteBox().getObjectsViaKlassOopMaps(couple);
+        couple.onePerson = new Person(0, fn1, ln1);
+        couple.otherPerson = new Person(1, fn2, ln2);
+        objects = WB.getObjectsViaKlassOopMaps(couple);
         assertTrue(objects.length == 4, "Expected 4 oops");
         assertTrue(objects[0] == fn1, "Bad oop fn1");
         assertTrue(objects[1] == ln1, "Bad oop ln1");
         assertTrue(objects[2] == fn2, "Bad oop fn2");
         assertTrue(objects[3] == ln2, "Bad oop ln2");
 
-        objects = WhiteBox.getWhiteBox().getObjectsViaOopIterator(couple);
+        objects = WB.getObjectsViaOopIterator(couple);
         assertTrue(objects.length == 4, "Expected 4 oops");
         assertTrue(objects[0] == fn1, "Bad oop fn1");
         assertTrue(objects[1] == ln1, "Bad oop ln1");
@@ -227,7 +253,7 @@ public class InlineOops {
         assertTrue(objects[3] == ln2, "Bad oop ln2");
 
         // Array..
-        objects = WhiteBox.getWhiteBox().getObjectsViaOopIterator(createPeople());
+        objects = WB.getObjectsViaOopIterator(createPeople());
         assertTrue(objects.length == NOF_PEOPLE * 2, "Unexpected length: " + objects.length);
         int o = 0;
         for (int i = 0; i < NOF_PEOPLE; i++) {
@@ -248,10 +274,10 @@ public class InlineOops {
     }
 
     static final String GET_OOP_MAP_NAME = "getOopMap";
-    static final String GET_OOP_MAP_DESC = "()[Ljava/lang/Object;";
+    static final MethodTypeDesc GET_OOP_MAP_DESC = MethodTypeDesc.ofDescriptor("()[Ljava/lang/Object;");
 
     public static Object[] getOopMap() {
-        Object[] oopMap = WhiteBox.getWhiteBox().getObjectsViaFrameOopIterator(2);
+        Object[] oopMap = WB.getObjectsViaFrameOopIterator(2);
         /* Remove this frame (class mirror for this method), and above class mirror */
         Object[] trimmedOopMap = new Object[oopMap.length - 2];
         System.arraycopy(oopMap, 2, trimmedOopMap, 0, trimmedOopMap.length);
@@ -263,7 +289,7 @@ public class InlineOops {
         int someId = 89898;
         Person person = couple.onePerson;
         assertTrue(person.getId() == 0, "Bad Person");
-        Person anotherPerson = Person.create(someId, TEST_STRING1, TEST_STRING2);
+        Person anotherPerson = new Person(someId, TEST_STRING1, TEST_STRING2);
         assertTrue(anotherPerson.getId() == someId, "Bad Person");
         return getOopMap();
     }
@@ -277,7 +303,7 @@ public class InlineOops {
     }
 
     /**
-     * Just some check sanity checks with defaultvalue, withfield, astore and aload
+     * Just some check sanity checks with aconst_init, withfield, astore and aload
      *
      * Changes to javac slot usage may well break this test
      */
@@ -333,28 +359,28 @@ public class InlineOops {
      */
     public static void testOverGc() {
         try {
-            Class<?> vtClass = Person.class.asValueType();
+            Class<?> vtClass = Person.class;
 
             System.out.println("vtClass="+vtClass);
 
             doGc();
 
             // VT on stack and lvt, null refs, see if GC flies
-            MethodHandle moveValueThroughStackAndLvt = InstructionHelper.loadCode(
+            MethodHandle moveValueThroughStackAndLvt = InstructionHelper.buildMethodHandle(
                     LOOKUP,
                     "gcOverPerson",
                     MethodType.methodType(vtClass, vtClass),
                     CODE->{
                         CODE
                         .aload(0)
-                        .invokestatic(InlineOops.class, "doGc", "()V", false) // Stack
+                        .invokestatic(classDesc(InlineOops.class), "doGc", MethodTypeDesc.ofDescriptor("()V")) // Stack
                         .astore(0)
-                        .invokestatic(InlineOops.class, "doGc", "()V", false) // LVT
+                        .invokestatic(classDesc(InlineOops.class), "doGc", MethodTypeDesc.ofDescriptor("()V")) // LVT
                         .aload(0)
                         .astore(1024) // LVT wide index
                         .aload(1024)
                         .iconst_1()  // push a litte further down
-                        .invokestatic(InlineOops.class, "doGc", "()V", false) // Stack,LVT
+                        .invokestatic(classDesc(InlineOops.class), "doGc", MethodTypeDesc.ofDescriptor("()V")) // Stack,LVT
                         .pop()
                         .areturn();
                     });
@@ -372,11 +398,9 @@ public class InlineOops {
         catch (Throwable t) { fail("testOverGc", t); }
     }
 
-    static void submitNewWork(ForkJoinPool fjPool, int size) {
-        for (int i = 0; i < size; i++) {
-            for (int j = 0; j < 100; j++) {
-                fjPool.execute(InlineOops::testValues);
-            }
+    static void submitNewWork(ForkJoinPool fjPool) {
+        for (int j = 0; j < 100; j++) {
+            fjPool.execute(InlineOops::testValues);
         }
     }
 
@@ -392,8 +416,7 @@ public class InlineOops {
      */
     public static void testActiveGc() {
         try {
-            int nofThreads = 7;
-            int workSize = nofThreads * 10;
+            int nofThreads = 1;
 
             Object longLivedObjects = createLongLived();
             Object longLivedPeople = createPeople();
@@ -403,44 +426,27 @@ public class InlineOops {
 
             doGc();
 
+            // Setup some background work, where GC roots are stack local only, short lifetimes...
             ForkJoinPool fjPool = new ForkJoinPool(nofThreads, ForkJoinPool.defaultForkJoinWorkerThreadFactory, null, true);
 
-            // submit work until we see some GC
-            Reference ref = createRef();
-            submitNewWork(fjPool, workSize);
-            while (ref.get() != null) {
-                if (fjPool.hasQueuedSubmissions()) {
-                    sleepNoThrow(1L);
+            // Work on this stack's long and medium lived objects
+            for (int nofActiveGc = 0; nofActiveGc < MIN_ACTIVE_GC_COUNT; nofActiveGc++) {
+                // Medium lifetime, check and renew
+                if (nofActiveGc % MED_ACTIVE_GC_COUNT == 0) {
+                    validateLongLived(medLivedObjects);
+                    validatePeople(medLivedPeople);
+
+                    medLivedObjects = createLongLived();
+                    medLivedPeople = createPeople();
                 }
-                else {
-                    workSize *= 2; // Grow the submission size
-                    submitNewWork(fjPool, workSize);
+                // More short lived background, if needed
+                if (!fjPool.hasQueuedSubmissions()) {
+                    submitNewWork(fjPool);
                 }
+                // Forced, synchronous GC
+                doGc();
             }
 
-            // Keep working and actively GC, until MIN_ACTIVE_GC_COUNT
-            int nofActiveGc = 1;
-            ref = createRef();
-            while (nofActiveGc < MIN_ACTIVE_GC_COUNT) {
-                if (ref.get() == null) {
-                    nofActiveGc++;
-                    ref = createRef();
-                    if (nofActiveGc % MED_ACTIVE_GC_COUNT == 0) {
-                        validateLongLived(medLivedObjects);
-                        validatePeople(medLivedPeople);
-
-                        medLivedObjects = createLongLived();
-                        medLivedPeople = createPeople();
-                    }
-                }
-                else if (fjPool.hasQueuedSubmissions()) {
-                    sleepNoThrow((long) Utils.getRandomInstance().nextInt(1000));
-                    doGc();
-                }
-                else {
-                    submitNewWork(fjPool, workSize);
-                }
-            }
             fjPool.shutdown();
 
             validateLongLived(medLivedObjects);
@@ -462,15 +468,7 @@ public class InlineOops {
     static final ReferenceQueue<Object> REFQ = new ReferenceQueue<>();
 
     public static void doGc() {
-        // Create Reference, wait until it clears...
-        Reference ref = createRef();
-        while (ref.get() != null) {
-            System.gc();
-        }
-    }
-
-    static Reference createRef() {
-        return new WeakReference<Object>(new Object(), REFQ);
+        WB.fullGC();
     }
 
     static void validatePerson(Person person, int id, String fn, String ln, boolean equals) {
@@ -486,7 +484,7 @@ public class InlineOops {
     }
 
     static Person createIndexedPerson(int i) {
-        return Person.create(i, firstName(i), lastName(i));
+        return new Person(i, firstName(i), lastName(i));
     }
 
     static void validateIndexedPerson(Person person, int i) {
@@ -494,7 +492,7 @@ public class InlineOops {
     }
 
     static Person createDefaultPerson() {
-        return Person.create(0, null, null);
+        return (Person)ValueClass.newNullRestrictedArray(Person.class, 1)[0];
     }
 
     static void validateDefaultPerson(Person person) {
@@ -540,7 +538,9 @@ public class InlineOops {
 
     // Various field layouts...sanity testing, see MVTCombo testing for full-set
 
-    static final primitive class ObjectValue {
+    @ImplicitlyConstructible
+    @LooselyConsistentValue
+    static value class ObjectValue {
         final Object object;
 
         private ObjectValue(Object obj) {
@@ -574,29 +574,29 @@ public class InlineOops {
         String otherStuff;
     }
 
-    public static final primitive class FooValue {
+    @ImplicitlyConstructible
+    @LooselyConsistentValue
+    public static value class FooValue {
         public final int id;
         public final String name;
         public final String description;
         public final long timestamp;
         public final String notes;
 
-        private FooValue() {
-            id          = 0;
-            name        = null;
+        public FooValue() {
+            id = 0;
+            name = null;
             description = null;
-            timestamp   = 0L;
-            notes       = null;
+            timestamp = 0L;
+            notes = null;
         }
 
-        public static FooValue create(int id, String name, String description, long timestamp, String notes) {
-            FooValue f = FooValue.default;
-            f = __WithField(f.id, id);
-            f = __WithField(f.name, name);
-            f = __WithField(f.description, description);
-            f = __WithField(f.timestamp, timestamp);
-            f = __WithField(f.notes, notes);
-            return f;
+        public FooValue(int id, String name, String description, long timestamp, String notes) {
+            this.id = id;
+            this.name = name;
+            this.description = description;
+            this.timestamp = timestamp;
+            this.notes = notes;
         }
 
         public static void testFrameOopsDefault(Object[][] oopMaps) {
@@ -607,32 +607,36 @@ public class InlineOops {
             // Slots 1=oopMaps
             // OopMap Q=RRR (.name .description .someNotes)
             try {
-                InstructionHelper.loadCode(
+                InstructionHelper.buildMethodHandle(
                         LOOKUP, "exerciseVBytecodeExprStackWithDefault", mt,
                         CODE->{
                             CODE
-                            .defaultvalue(FooValue.class.asValueType())
+                            .new_(classDesc(FooValue.class))
+                            .dup()
+                            .invokespecial(classDesc(FooValue.class), "<init>", MethodTypeDesc.ofDescriptor("()V"))
                             .aload(oopMapsSlot)
                             .iconst_0()  // Test-D0 Slots=R Stack=Q(RRR)RV
-                            .invokestatic(InlineOops.class, GET_OOP_MAP_NAME, GET_OOP_MAP_DESC, false)
+                            .invokestatic(classDesc(InlineOops.class), GET_OOP_MAP_NAME, GET_OOP_MAP_DESC)
                             .aastore()
                             .pop()
                             .aload(oopMapsSlot)
                             .iconst_1()  // Test-D1 Slots=R Stack=RV
-                            .invokestatic(InlineOops.class, GET_OOP_MAP_NAME, GET_OOP_MAP_DESC, false)
+                            .invokestatic(classDesc(InlineOops.class), GET_OOP_MAP_NAME, GET_OOP_MAP_DESC)
                             .aastore()
-                            .defaultvalue(FooValue.class.asValueType())
+                            .new_(classDesc(FooValue.class))
+                            .dup()
+                            .invokespecial(classDesc(FooValue.class), "<init>", MethodTypeDesc.ofDescriptor("()V"))
                             .astore(vtSlot)
                             .aload(oopMapsSlot)
                             .iconst_2()  // Test-D2 Slots=RQ(RRR) Stack=RV
-                            .invokestatic(InlineOops.class, GET_OOP_MAP_NAME, GET_OOP_MAP_DESC, false)
+                            .invokestatic(classDesc(InlineOops.class), GET_OOP_MAP_NAME, GET_OOP_MAP_DESC)
                             .aastore()
                             .aload(vtSlot)
                             .aconst_null()
                             .astore(vtSlot) // Storing null over the Q slot won't remove the ref, but should be single null ref
                             .aload(oopMapsSlot)
                             .iconst_3()  // Test-D3 Slots=R Stack=Q(RRR)RV
-                            .invokestatic(InlineOops.class, GET_OOP_MAP_NAME, GET_OOP_MAP_DESC, false)
+                            .invokestatic(classDesc(InlineOops.class), GET_OOP_MAP_NAME, GET_OOP_MAP_DESC)
                             .aastore()
                             .pop()
                             .return_();
@@ -641,13 +645,14 @@ public class InlineOops {
         }
 
         public static void testFrameOopsRefs(String name, String description, String notes, Object[][] oopMaps) {
-            FooValue f = create(4711, name, description, 9876543231L, notes);
-            FooValue[] fa = new FooValue[] { f };
+            FooValue f = new FooValue(4711, name, description, 9876543231L, notes);
+            FooValue[] fa = (FooValue[])ValueClass.newNullRestrictedArray(FooValue.class, 1);
+            fa[0] = f;
             MethodType mt = MethodType.methodType(Void.TYPE, fa.getClass(), oopMaps.getClass());
             int fooArraySlot  = 0;
             int oopMapsSlot   = 1;
             try {
-                InstructionHelper.loadCode(LOOKUP, "exerciseVBytecodeExprStackWithRefs", mt,
+                InstructionHelper.buildMethodHandle(LOOKUP, "exerciseVBytecodeExprStackWithRefs", mt,
                         CODE->{
                             CODE
                             .aload(fooArraySlot)
@@ -655,7 +660,7 @@ public class InlineOops {
                             .aaload()
                             .aload(oopMapsSlot)
                             .iconst_0()  // Test-R0 Slots=RR Stack=Q(RRR)RV
-                            .invokestatic(InlineOops.class, GET_OOP_MAP_NAME, GET_OOP_MAP_DESC, false)
+                            .invokestatic(classDesc(InlineOops.class), GET_OOP_MAP_NAME, GET_OOP_MAP_DESC)
                             .aastore()
                             .pop()
                             .return_();
@@ -672,12 +677,15 @@ public class InlineOops {
         String otherStuff;
     }
 
-    static final primitive class BarValue {
-        final FooValue foo;
-        final long extendedId;
-        final String moreNotes;
-        final int count;
-        final String otherStuff;
+    @ImplicitlyConstructible
+    @LooselyConsistentValue
+    static value class BarValue {
+        @NullRestricted
+        FooValue foo;
+        long extendedId;
+        String moreNotes;
+        int count;
+        String otherStuff;
 
         private BarValue(FooValue f, long extId, String mNotes, int c, String other) {
             foo = f;
@@ -689,4 +697,3 @@ public class InlineOops {
     }
 
 }
-
