@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -36,15 +36,16 @@ import jdk.test.lib.jfr.Events;
  * @test
  * @bug 8242263
  * @requires vm.hasJFR
- * @key jfr
+ * @requires vm.flagless
  * @library /test/lib
  * @run main/othervm -XX:+UnlockDiagnosticVMOptions -XX:DiagnoseSyncOnValueBasedClasses=2 jdk.jfr.event.runtime.TestSyncOnValueBasedClassEvent
+ * @run main/othervm --enable-preview -XX:+UnlockDiagnosticVMOptions -XX:DiagnoseSyncOnValueBasedClasses=2 jdk.jfr.event.runtime.TestSyncOnValueBasedClassEvent
  */
 public class TestSyncOnValueBasedClassEvent {
     static final String EVENT_NAME = EventNames.SyncOnValueBasedClass;
     static String[] classesWanted = {"java/lang/Character", "java/lang/Boolean", "java/lang/Byte", "java/lang/Short",
                                      "java/lang/Integer", "java/lang/Long", "java/lang/Float", "java/lang/Double",
-                                     "java/time/Duration", "java/util/OptionalInt", "java/lang/Runtime$Version"};
+                                     "java/lang/Runtime$Version"};
     static List<Object> testObjects = new ArrayList<Object>();
     static Integer counter = 0;
 
@@ -57,8 +58,6 @@ public class TestSyncOnValueBasedClassEvent {
         testObjects.add(Long.valueOf(0x4000000000000000L));
         testObjects.add(Float.valueOf(1.20f));
         testObjects.add(Double.valueOf(1.2345));
-        testObjects.add(Duration.ofMillis(5));
-        testObjects.add(OptionalInt.of(10));
         testObjects.add(Runtime.version());
     }
 
@@ -77,7 +76,7 @@ public class TestSyncOnValueBasedClassEvent {
         List<String> classesFound = new ArrayList<String>();
         List<RecordedEvent> events = Events.fromRecording(recording);
         Events.hasEvents(events);
-        for (RecordedEvent event : Events.fromRecording(recording)) {
+        for (RecordedEvent event : events) {
             String className = Events.assertField(event, "valueBasedClass.name").notEmpty().getValue();
             RecordedThread jt = event.getThread();
             if (Thread.currentThread().getName().equals(jt.getJavaName())) {
